--- a/crm_partner_assign/i18n/sl.po
+++ b/crm_partner_assign/i18n/sl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-03-07 08:38+0000\n"
-"PO-Revision-Date: 2013-11-09 11:33+0000\n"
+"PO-Revision-Date: 2013-11-10 08:46+0000\n"
 "Last-Translator: Darja Zorman <darja.zorman@mentis.si>\n"
 "Language-Team: Slovenian <sl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-10 06:44+0000\n"
+"X-Launchpad-Export-Date: 2013-11-11 05:38+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: crm_partner_assign
@@ -38,6 +38,9 @@ msgid ""
 "Message type: email for email message, notification for system message, "
 "comment for other messages such as user replies"
 msgstr ""
+"Tip sporočila: elektronska pošta za elektronsko sporočilo, zaznamek za "
+"sistemsko sporočilo, komentar za ostala sporočila kot npr. uporabnikov "
+"odgovor"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,nbr:0
@@ -53,7 +56,7 @@ msgstr "Združeno po..."
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,body:0
 msgid "Automatically sanitized HTML contents"
-msgstr ""
+msgstr "Avtomatično urejena HTML vsebina"
 
 #. module: crm_partner_assign
 #: view:crm.lead:0
@@ -63,7 +66,7 @@ msgstr "Posreduj"
 #. module: crm_partner_assign
 #: view:res.partner:0
 msgid "Geo Localize"
-msgstr ""
+msgstr "Geo lokalizacija"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,starred:0
@@ -81,26 +84,28 @@ msgid ""
 "Email address of the sender. This field is set when no matching partner is "
 "found for incoming emails."
 msgstr ""
+"Elektronski naslov pošiljatelja. To polje je označeno, če ni najden ustrezen "
+"partner za vhodno pošto."
 
 #. module: crm_partner_assign
 #: view:crm.partner.report.assign:0
 msgid "Date Partnership"
-msgstr ""
+msgstr "Datum partnerstva"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,type:0
 msgid "Lead"
-msgstr ""
+msgstr "Potencialna priložnost"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
 msgid "Delay to close"
-msgstr ""
+msgstr "Zamuda pri izvedbi"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.forward.to.partner,history_mode:0
 msgid "Whole Story"
-msgstr ""
+msgstr "Celotna zgodba"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -116,7 +121,7 @@ msgstr "Obvestila"
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,date_assign:0
 msgid "Partner Date"
-msgstr ""
+msgstr "Partnerjev datum"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -407,18 +412,18 @@ msgstr "Marec"
 #: model:ir.actions.act_window,name:crm_partner_assign.action_report_crm_opportunity_assign
 #: model:ir.ui.menu,name:crm_partner_assign.menu_report_crm_opportunities_assign_tree
 msgid "Opp. Assignment Analysis"
-msgstr ""
+msgstr "Analiza prireditev priložnosti"
 
 #. module: crm_partner_assign
 #: help:crm.lead.report.assign,delay_close:0
 msgid "Number of Days to close the case"
-msgstr ""
+msgstr "Število dni za končanje zadeve"
 
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,notified_partner_ids:0
 msgid ""
 "Partners that have a notification pushing this message in their mailboxes"
-msgstr ""
+msgstr "Partnerji z opombo, da se to sporočilo pošlje v njihov poštni predal"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.forward.to.partner,type:0
@@ -451,7 +456,7 @@ msgstr "December"
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,vote_user_ids:0
 msgid "Users that voted for this message"
-msgstr ""
+msgstr "Uporabniki, ki so glasovali za to sporočilo"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -473,7 +478,7 @@ msgstr "Podrejeno sporočilo"
 #: field:crm.partner.report.assign,date_review:0
 #: field:res.partner,date_review:0
 msgid "Latest Partner Review"
-msgstr ""
+msgstr "Zadnji pregled partnerja"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,subject:0
@@ -498,18 +503,20 @@ msgstr "Glasovi"
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
 msgid "#Opportunities"
-msgstr ""
+msgstr "#Priložnosti"
 
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,starred:0
 msgid "Current user has a starred notification linked to this message"
 msgstr ""
+"Trenutni uporabnik ima z zvezdico označeno obvestilo, povezano s tem "
+"sporočilom"
 
 #. module: crm_partner_assign
 #: field:crm.partner.report.assign,date_partnership:0
 #: field:res.partner,date_partnership:0
 msgid "Partnership Date"
-msgstr ""
+msgstr "Datum partnerstva"
 
 #. module: crm_partner_assign
 #: view:crm.lead:0
@@ -524,7 +531,7 @@ msgstr "Osnutek"
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,priority:0
 msgid "Low"
-msgstr ""
+msgstr "Nizko"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -535,23 +542,23 @@ msgstr "Zaprto"
 #. module: crm_partner_assign
 #: model:ir.actions.act_window,name:crm_partner_assign.action_crm_send_mass_forward
 msgid "Mass forward to partner"
-msgstr ""
+msgstr "Masovno posredovanje partnerju"
 
 #. module: crm_partner_assign
 #: view:res.partner:0
 #: field:res.partner,opportunity_assigned_ids:0
 msgid "Assigned Opportunities"
-msgstr ""
+msgstr "Prirejene priložnosti"
 
 #. module: crm_partner_assign
 #: field:crm.lead,date_assign:0
 msgid "Assignation Date"
-msgstr ""
+msgstr "Datum priredbe"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,probability_max:0
 msgid "Max Probability"
-msgstr ""
+msgstr "Max verjetnost"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,month:0
@@ -561,7 +568,7 @@ msgstr "Avgust"
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,record_name:0
 msgid "Name get of the related document."
-msgstr ""
+msgstr "Ime, pridobljeno iz povezanega dokumenta"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,priority:0
@@ -571,7 +578,7 @@ msgstr "Običajno"
 #. module: crm_partner_assign
 #: view:res.partner:0
 msgid "Escalate"
-msgstr ""
+msgstr "Eskaliranje"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,month:0
@@ -581,12 +588,12 @@ msgstr "Junij"
 #. module: crm_partner_assign
 #: help:crm.lead.report.assign,delay_open:0
 msgid "Number of Days to open the case"
-msgstr ""
+msgstr "Število dni za odprtje primera"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,delay_open:0
 msgid "Delay to Open"
-msgstr ""
+msgstr "Zamuda pri odpiranju"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,user_id:0
@@ -613,7 +620,7 @@ msgstr "Razširjeni filtri..."
 #: field:crm.lead,partner_longitude:0
 #: field:res.partner,partner_longitude:0
 msgid "Geo Longitude"
-msgstr ""
+msgstr "Zemljepisna širina"
 
 #. module: crm_partner_assign
 #: field:crm.partner.report.assign,opp:0
@@ -643,7 +650,7 @@ msgstr "Januar"
 #. module: crm_partner_assign
 #: view:crm.lead.forward.to.partner:0
 msgid "Send Mail"
-msgstr ""
+msgstr "Pošlji pošto"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,date:0
@@ -653,12 +660,12 @@ msgstr "Datum"
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
 msgid "Planned Revenues"
-msgstr ""
+msgstr "Načrtovani prihodki"
 
 #. module: crm_partner_assign
 #: view:res.partner:0
 msgid "Partner Review"
-msgstr ""
+msgstr "Pregled partnerja"
 
 #. module: crm_partner_assign
 #: field:crm.partner.report.assign,period_id:0
@@ -673,7 +680,7 @@ msgstr "res.partner.grade"
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,message_id:0
 msgid "Message-Id"
-msgstr ""
+msgstr "ID sporočila"
 
 #. module: crm_partner_assign
 #: view:crm.lead.forward.to.partner:0
@@ -699,6 +706,8 @@ msgid ""
 "Cannot contact geolocation servers. Please make sure that your internet "
 "connection is up and running (%s)."
 msgstr ""
+"Ne morem vzpostaviti povezave z geolokacijskim serverjem. Prosimo preverit, "
+"če je vaša internetna povezava aktivna (%s)."
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,month:0
@@ -708,12 +717,12 @@ msgstr "September"
 #. module: crm_partner_assign
 #: field:res.partner.grade,name:0
 msgid "Grade Name"
-msgstr ""
+msgstr "Ime stopnje"
 
 #. module: crm_partner_assign
 #: help:crm.lead,date_assign:0
 msgid "Last date this case was forwarded/assigned to a partner"
-msgstr ""
+msgstr "Zadnji datum, ko je bil ta primer posredovan partnerju"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,state:0
@@ -729,7 +738,7 @@ msgstr "Podvrsta"
 #. module: crm_partner_assign
 #: field:res.partner,date_localization:0
 msgid "Geo Localization Date"
-msgstr ""
+msgstr "Datum geolokalizacije"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -739,18 +748,18 @@ msgstr "Trenutno"
 #. module: crm_partner_assign
 #: model:ir.model,name:crm_partner_assign.model_crm_lead
 msgid "Lead/Opportunity"
-msgstr ""
+msgstr "Možnost/priložnost"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,notified_partner_ids:0
 msgid "Notified partners"
-msgstr ""
+msgstr "Obveščeni partnerji"
 
 #. module: crm_partner_assign
 #: view:crm.lead.forward.to.partner:0
 #: model:ir.actions.act_window,name:crm_partner_assign.crm_lead_forward_to_partner_act
 msgid "Forward to Partner"
-msgstr ""
+msgstr "Posreduj partnerju"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,section_id:0
@@ -766,7 +775,7 @@ msgstr "Maj"
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,probable_revenue:0
 msgid "Probable Revenue"
-msgstr ""
+msgstr "Verjetni prihodek"
 
 #. module: crm_partner_assign
 #: view:crm.partner.report.assign:0
@@ -786,12 +795,13 @@ msgstr ""
 #. module: crm_partner_assign
 #: field:res.partner,grade_id:0
 msgid "Partner Level"
-msgstr ""
+msgstr "Nivo partnerja"
 
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,to_read:0
 msgid "Current user has an unread notification linked to this message"
 msgstr ""
+"Trenutni uporabnik ima neprebrano obvestilo povezano s tem sporočilom"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,type:0
@@ -817,7 +827,7 @@ msgstr "Ime"
 #: model:ir.actions.act_window,name:crm_partner_assign.res_partner_activation_act
 #: model:ir.ui.menu,name:crm_partner_assign.res_partner_activation_config_mi
 msgid "Partner Activations"
-msgstr ""
+msgstr "Aktiviranje partnerja"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
@@ -841,18 +851,18 @@ msgstr "Spremeni v priložnost"
 #. module: crm_partner_assign
 #: view:crm.lead:0
 msgid "Geo Assign"
-msgstr ""
+msgstr "Geo priredba"
 
 #. module: crm_partner_assign
 #: view:crm.lead.report.assign:0
 msgid "Delay to open"
-msgstr ""
+msgstr "Zamuda pri odpiranju"
 
 #. module: crm_partner_assign
 #: model:ir.actions.act_window,name:crm_partner_assign.action_report_crm_partner_assign
 #: model:ir.ui.menu,name:crm_partner_assign.menu_report_crm_partner_assign_tree
 msgid "Partnership Analysis"
-msgstr ""
+msgstr "Analiza partnerstva"
 
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,notification_ids:0
@@ -860,6 +870,8 @@ msgid ""
 "Technical field holding the message notifications. Use notified_partner_ids "
 "to access notified partners."
 msgstr ""
+"Tehnično polje s sporočilom. Uporabite notified_partner_ids za dostop do "
+"obveščenih partnerjev."
 
 #. module: crm_partner_assign
 #: view:crm.partner.report.assign:0
@@ -874,17 +886,17 @@ msgstr ""
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,composition_mode:0
 msgid "Composition mode"
-msgstr ""
+msgstr "Način za sestavo"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,model:0
 msgid "Related Document Model"
-msgstr ""
+msgstr "Povezan dokumentni model"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.forward.to.partner,history_mode:0
 msgid "Case Information"
-msgstr ""
+msgstr "Informacija o primeru"
 
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,author_id:0
@@ -892,26 +904,28 @@ msgid ""
 "Author of the message. If not set, email_from may hold an email address that "
 "did not match any partner."
 msgstr ""
+"Avtor sporočila. Če ni nastavljen, lahko email_from vsebuje elektronski "
+"naslov, ki ni povezan z nobenim partnerjem."
 
 #. module: crm_partner_assign
 #: model:ir.model,name:crm_partner_assign.model_crm_partner_report_assign
 msgid "CRM Partner Report"
-msgstr ""
+msgstr "Poročilo CRM-Partner"
 
 #. module: crm_partner_assign
 #: selection:crm.lead.report.assign,priority:0
 msgid "High"
-msgstr ""
+msgstr "Visoko"
 
 #. module: crm_partner_assign
 #: field:crm.lead.forward.to.partner,partner_ids:0
 msgid "Additional contacts"
-msgstr ""
+msgstr "Dodatni kontakti"
 
 #. module: crm_partner_assign
 #: help:crm.lead.forward.to.partner,parent_id:0
 msgid "Initial thread message."
-msgstr ""
+msgstr "Prvotno sporočilo"
 
 #. module: crm_partner_assign
 #: field:crm.lead.report.assign,create_date:0
