--- a/delivery/i18n/sl.po
+++ b/delivery/i18n/sl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-09 11:11+0000\n"
+"PO-Revision-Date: 2013-11-10 08:51+0000\n"
 "Last-Translator: Darja Zorman <darja.zorman@mentis.si>\n"
 "Language-Team: Slovenian <sl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-10 06:44+0000\n"
+"X-Launchpad-Export-Date: 2013-11-11 05:38+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: delivery
@@ -406,7 +406,7 @@ msgstr "Datum dostave"
 #. module: delivery
 #: field:delivery.carrier,product_id:0
 msgid "Delivery Product"
-msgstr ""
+msgstr "Dostavni proizvod"
 
 #. module: delivery
 #: view:delivery.grid.line:0
@@ -566,7 +566,7 @@ msgstr "Cenovna informacija"
 #. module: delivery
 #: field:delivery.carrier,use_detailed_pricelist:0
 msgid "Advanced Pricing per Destination"
-msgstr ""
+msgstr "Napredno določanje cen po destinacijah"
 
 #. module: delivery
 #: view:delivery.carrier:0
@@ -582,18 +582,18 @@ msgstr "Nosilec"
 #: model:ir.actions.act_window,name:delivery.action_delivery_carrier_form
 #: model:ir.ui.menu,name:delivery.menu_action_delivery_carrier_form
 msgid "Delivery Methods"
-msgstr ""
+msgstr "Načini dostave"
 
 #. module: delivery
 #: code:addons/delivery/sale.py:57
 #, python-format
 msgid "The order state have to be draft to add delivery lines."
-msgstr ""
+msgstr "Status naročila mora biti \"Osnutek\", če želite dodati postavke."
 
 #. module: delivery
 #: field:delivery.carrier,grids_id:0
 msgid "Delivery Grids"
-msgstr ""
+msgstr "Dostavne mreže"
 
 #. module: delivery
 #: field:delivery.grid,sequence:0
@@ -620,7 +620,7 @@ msgstr "Pokrajine"
 #: help:stock.move,weight_uom_id:0
 msgid ""
 "Unit of Measure (Unit of Measure) is the unit of measurement for Weight"
-msgstr ""
+msgstr "Enota mere je enota mere za težo."
 
 #. module: delivery
 #: field:delivery.grid.line,price_type:0
