--- a/marketing/i18n/ja.po
+++ b/marketing/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-11-08 08:37+0000\n"
+"PO-Revision-Date: 2013-11-10 10:32+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-10 06:44+0000\n"
+"X-Launchpad-Export-Date: 2013-11-11 05:38+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: marketing
@@ -45,32 +45,32 @@ msgstr "マーケティング"
 #. module: marketing
 #: field:marketing.config.settings,module_marketing_campaign:0
 msgid "Marketing campaigns"
-msgstr ""
+msgstr "マーケティングキャンペーン"
 
 #. module: marketing
 #: view:marketing.config.settings:0
 msgid "or"
-msgstr ""
+msgstr "または"
 
 #. module: marketing
 #: view:marketing.config.settings:0
 msgid "Campaigns"
-msgstr ""
+msgstr "キャンペーン"
 
 #. module: marketing
 #: model:res.groups,name:marketing.group_marketing_manager
 msgid "Manager"
-msgstr "マネージャー"
+msgstr "マネジャ"
 
 #. module: marketing
 #: model:res.groups,name:marketing.group_marketing_user
 msgid "User"
-msgstr "ユーザー"
+msgstr "ユーザ"
 
 #. module: marketing
 #: view:marketing.config.settings:0
 msgid "Campaigns Settings"
-msgstr ""
+msgstr "キャンペーン設定"
 
 #. module: marketing
 #: field:marketing.config.settings,module_crm_profiling:0
@@ -85,7 +85,7 @@ msgstr ""
 #. module: marketing
 #: view:marketing.config.settings:0
 msgid "Apply"
-msgstr ""
+msgstr "適用"
 
 #. module: marketing
 #: help:marketing.config.settings,module_marketing_campaign:0
