--- a/purchase/i18n/fi.po
+++ b/purchase/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-06 16:04+0000\n"
+"PO-Revision-Date: 2013-11-10 20:42+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-07 05:51+0000\n"
+"X-Launchpad-Export-Date: 2013-11-11 05:38+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: purchase
@@ -270,7 +270,7 @@ msgid ""
 "invoice is based on received or on ordered quantities."
 msgstr ""
 "Ostotilaus luo ostolaskun heti, kun ostaja on vahvistanut oston. "
-"Ostolaskujen valvonnasta riippuen lasku voi perustua vastaanotettuun tai "
+"Ostolaskujen hallinnasta riippuen lasku voi perustua vastaanotettuun tai "
 "tilattuun määrään."
 
 #. module: purchase
@@ -333,7 +333,7 @@ msgstr ""
 "            riippuen asetuksista.\n"
 "          </p><p>\n"
 "            Kun vastaanotat toimittajalta ostolaskun, voit kohdistaa sen\n"
-"            ostolaskuehdotukseen ja hyväksyä.\n"
+"            ostolaskuehdotukseen ja vahvistaa ostolaskun.\n"
 "          </p>\n"
 "        "
 
@@ -421,9 +421,9 @@ msgstr ""
 "hankintatilausten tai\n"
 "                    vastaanottojen  perusteella. Tämä mahdollistaa "
 "toimittajalta\n"
-"                    saapuvien ostolaskujen valvonnan vertaamalla "
-"ostolaskuehdotuksiin,\n"
-"                    jotka on dokumentotu OpenERP:iin.\n"
+"                    saapuvien ostolaskujen hallinnan vertaamalla niitä "
+"OpenERP:in\n"
+"                    ostolaskuehdotuksiin .\n"
 "                </p>\n"
 "            "
 
@@ -468,9 +468,9 @@ msgid ""
 "            "
 msgstr ""
 "<p>\n"
-"                Tästä voit seurata kaikkia ostotilauksen rivejä, joissa "
-"laskutustapa\n"
-"                on valittu \"Perustuu Hankintatilauksen riveihin\", ja "
+"                Tästä voi seurata kaikkia ostotilauksen rivejä, joissa "
+"laskutustavaksi\n"
+"                on valittu \"Perustuu ostotilauksen riveihin\", ja "
 "ostolaskua \n"
 "                toimittajalta ei ole vielä saapunut. Voit luoda "
 "ostolaskuehdotuksen \n"
@@ -552,9 +552,9 @@ msgid ""
 "order is 'On order'. The invoice can also be generated manually by the "
 "accountant (Invoice control = Manual)."
 msgstr ""
-"Lasku luodaan automaattisesti, jos laskujen kontrolli ostotilauksella on "
+"Lasku luodaan automaattisesti, jos laskujen hallinta ostotilauksella on "
 "'tilattaessa'. Lasku voidaan luoda myös manuaalisesti kirjanpitäjän toimesta "
-"(laskujen kontrolli = manuaalinen)."
+"(laskujen hallinta = manuaalinen)."
 
 #. module: purchase
 #: model:mail.message.subtype,name:purchase.mt_rfq_approved
@@ -1024,7 +1024,7 @@ msgstr "Tarjouspyynnöt ja ostot"
 #: field:account.config.settings,group_analytic_account_for_purchases:0
 #: field:purchase.config.settings,group_analytic_account_for_purchases:0
 msgid "Analytic accounting for purchases"
-msgstr "Ostojen analyyttiset tilit"
+msgstr "Ostojen analyyttinen kirjanpito"
 
 #. module: purchase
 #: model:process.transition,note:purchase.process_transition_confirmingpurchaseorder1
@@ -1032,8 +1032,9 @@ msgid ""
 "In case there is no supplier for this product, the buyer can fill the form "
 "manually and confirm it. The RFQ becomes a confirmed Purchase Order."
 msgstr ""
-"Jos tuotteelle ei ole toimittajaa, ostaja voi täyttää lomakkeen käsin ja "
-"vahvistaa sen. Tarjouspyynnöstä tulee vahvistettu ostotilaus."
+"Jos tuotteelle ei ole toimittajaa, ostaja voi täyttää lomakkeen "
+"manuaalisesti ja vahvistaa sen. Tarjouspyynnöstä tulee vahvistettu "
+"ostotilaus."
 
 #. module: purchase
 #: help:purchase.config.settings,group_purchase_pricelist:0
@@ -1149,7 +1150,7 @@ msgid ""
 "Reference of the document that generated this purchase order request; a "
 "sales order or an internal procurement request."
 msgstr ""
-"Viite asiakirjaan, josta tämä ostotilauspyyntö luotu: myyntitilaus tai "
+"Viite dokumenttiin, josta tämä ostotilauspyyntö on luotu: myyntitilaus tai "
 "sisäinen hankintapyyntö"
 
 #. module: purchase
@@ -1239,7 +1240,7 @@ msgstr "Ostotilaukselle luodut laskut"
 #. module: purchase
 #: selection:purchase.config.settings,default_invoice_method:0
 msgid "Pre-generate draft invoices based on purchase orders"
-msgstr "Alustava laskuehdotus perustuen ostotilauksiin"
+msgstr "Alustavat laskuehdotukset perustuen ostotilauksiin"
 
 #. module: purchase
 #: help:product.template,purchase_ok:0
@@ -1253,9 +1254,9 @@ msgid ""
 "order is 'On picking'. The invoice can also be generated manually by the "
 "accountant (Invoice control = Manual)."
 msgstr ""
-"Lasku on luotu automaattisesti, jos laskukontrolli ostotilauksessa on "
-"'keräilystä'. Lasku voidaan luoda myös käsin kirjanpitäjän toimesta "
-"(laskukontrolli=manuaalinen)"
+"Lasku on luotu automaattisesti, jos ostotilauksen laskunhallinta on "
+"\"keräilystä\". Lasku voidaan luoda myös manuaalisesti kirjanpitäjän "
+"toimesta (laskunhallinta=manuaalinen)"
 
 #. module: purchase
 #: report:purchase.quotation:0
@@ -1315,7 +1316,7 @@ msgstr ""
 "<p class=\"oe_view_nocontent_create\">\n"
 "                Klikkaa luodaksesi uuden vastaanoton.\n"
 "              </p><p> \n"
-"                Täällä void serrate kaikkia ostotuotteiden vastaanottoja,\n"
+"                Täällä voi seurata kaikkia ostotuotteiden vastaanottoja,\n"
 "                joissa laskutukseksi on valittu  \"Perustuu "
 "vastaanottoihin\"\n"
 "                ja joiden ostolaskut eivät ole vielä saapuneet "
@@ -1830,9 +1831,9 @@ msgstr ""
 "Ostotilauksen tai tarjouspyynnön tila. Tarjous on ostotilaus 'Ehdotus' "
 "tilassa. Kun käyttäjä vahvistaa ostotilausehdotuksen, sen tilaksi muuttuu "
 "'Vahvistettu'. Toimittajan pitää hyväksyä seuraavaksi ostotilaus, jolloin "
-"sen tilaksi tulee 'Hyväksytty'. Kun ostotilaus on \r\n"
-"maksettu ja vastaanotettu, tilaksi tulee 'Valmis'. Jos lasku tai tuotteen "
-"vastaanotto peruutetaan niin tilaksi tulee 'Poikkeus'."
+"sen tilaksi tulee 'Hyväksytty'. Kun ostotilaus on maksettu ja vastaanotettu, "
+"tilaksi tulee 'Valmis'. Jos lasku tai tuotteen vastaanotto peruutetaan niin "
+"tilaksi tulee 'Poikkeus'."
 
 #. module: purchase
 #: selection:purchase.order,state:0
@@ -1844,7 +1845,7 @@ msgstr "Peruttu"
 #. module: purchase
 #: field:res.partner,purchase_order_count:0
 msgid "# of Purchase Order"
-msgstr "Ostotilausten määrä"
+msgstr "Ostotilauksen numero"
 
 #. module: purchase
 #: model:ir.model,name:purchase.model_mail_compose_message
@@ -1859,7 +1860,7 @@ msgstr "Puh.:"
 #. module: purchase
 #: view:purchase.order:0
 msgid "Resend Purchase Order"
-msgstr "Ostotilauksen uusintalähetys"
+msgstr "Ostotilauksen uudelleenlähetys"
 
 #. module: purchase
 #: report:purchase.order:0
@@ -1895,8 +1896,8 @@ msgid ""
 "of the purchase order, the invoice is based on received or on ordered "
 "quantities."
 msgstr ""
-"Keräilysilta luo toimittajalaskun. Riippuen ostotilauksen kontrolleista, "
-"lasku perustuu joko vastaanotettuun tai tilattuun määrään"
+"Keräilyluettelo luo ostolaskun. Riippuen laskunhallinnasta lasku perustuu "
+"joko vastaanotettuun tai tilattuun määrään."
 
 #. module: purchase
 #: field:purchase.order,message_follower_ids:0
@@ -1913,6 +1914,12 @@ msgid ""
 "            to one supplier or if you want a purchase requisition to "
 "negotiate with several suppliers."
 msgstr ""
+"Ostopyyntöjä käytetään kun halutaan pyytää  tarvittavista tuotteista "
+"tarjouksia useilta toimittajilta. \n"
+"            Konfigurointi tuotteittain onnistuu tekemällä suoraan "
+"tarjouspyyntö yhdelle toimittajalle\n"
+"            tai jos halutaan ostopyyntö, jotta voidaan neuvotella useiden "
+"toimittajien kanssa."
 
 #. module: purchase
 #: field:purchase.order.line,invoice_lines:0
@@ -2097,8 +2104,8 @@ msgid ""
 "Bases on incoming shipments: let you create an invoice when receptions are "
 "validated."
 msgstr ""
-"Perustuu ostotilausriveihin: Sijoita yksittäiset rivit 'Invoice Control > "
-"Based on P.O. lines', josta voit vahvistaa laskutettavat rivit.\n"
+"Perustuu ostotilausriveihin: Sijoita yksittäiset rivit \"laskunhallinta > "
+"Perustuu ostotilausriveihin\", josta voit vahvistaa laskutettavat rivit.\n"
 "Perustuu luotuihin laskuihin: Luo laskuehdotuksen, jonka voit vahvistaa "
 "myöhemmin.\n"
 "Perustuu: saapuneisiin toimituksiin: Sallii laskun luonnin samalla, kun "
@@ -2153,7 +2160,8 @@ msgid ""
 "The selected supplier has a minimal quantity set to %s %s, you should not "
 "purchase less."
 msgstr ""
-"Valitulla toimittajalla on minimimäärä %s %s, sinun ei tulisi tilata vähempää"
+"Valitulla toimittajalla on minimimääräksi asetettu %s %s, sinun ei tulisi "
+"tilata vähempää"
 
 #. module: purchase
 #: report:purchase.order:0
@@ -2273,7 +2281,7 @@ msgstr "Tilausviitteesi"
 #. module: purchase
 #: report:purchase.order:0
 msgid "Purchase Order Confirmation N°"
-msgstr "Ostotilauksen vahvistuksen numero"
+msgstr "Ostotilauksen vahvistusnumero"
 
 #. module: purchase
 #: view:purchase.order:0
@@ -2348,6 +2356,17 @@ msgid ""
 "                </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                    Tälle toimittajalle ei ole ostotilausta. Klikkaa "
+"luodaksesi uusi tarjouspyyntö.\n"
+"                </p><p>\n"
+"                    Tarjouspyyntö on ensimmäinen vaihe ostoprosessissa. Kun "
+"tarjouspyyntö\n"
+"                    muutetaan ostotilaukseksi,  niin tuotteiden ja "
+"toimittajan laskujen vastaanottoa\n"
+"                    voi kontrolloida.\n"
+"                </p>\n"
+"            "
 
 #. module: purchase
 #: view:purchase.report:0
