--- a/purchase/i18n/ja.po
+++ b/purchase/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-10 05:49+0000\n"
+"PO-Revision-Date: 2013-11-10 08:45+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-10 06:45+0000\n"
+"X-Launchpad-Export-Date: 2013-11-11 05:38+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: purchase
@@ -190,7 +190,7 @@ msgstr ""
 #: view:purchase.order.line:0
 #: field:purchase.order.line,order_id:0
 msgid "Order Reference"
-msgstr "オーダー参照"
+msgstr "発注参照"
 
 #. module: purchase
 #: view:purchase.config.settings:0
@@ -636,7 +636,7 @@ msgstr ""
 #. module: purchase
 #: view:purchase.order:0
 msgid "(update)"
-msgstr ""
+msgstr "(更新)"
 
 #. module: purchase
 #: view:purchase.order:0
@@ -781,7 +781,7 @@ msgstr "見積依頼："
 #: model:ir.actions.act_window,name:purchase.action_picking_tree4_picking_to_invoice
 #: model:ir.ui.menu,name:purchase.menu_action_picking_tree4_picking_to_invoice
 msgid "On Incoming Shipments"
-msgstr ""
+msgstr "入荷ベース"
 
 #. module: purchase
 #: report:purchase.order:0
@@ -812,7 +812,7 @@ msgstr "これは請求書は既に支払われたことを意味しています
 #. module: purchase
 #: field:purchase.order,notes:0
 msgid "Terms and Conditions"
-msgstr ""
+msgstr "諸条件"
 
 #. module: purchase
 #: help:purchase.order,date_order:0
@@ -909,7 +909,7 @@ msgstr "キャンセル"
 #. module: purchase
 #: sql_constraint:purchase.order:0
 msgid "Order Reference must be unique per Company!"
-msgstr "オーダー参照は、会社ごとに固有でなければなりません。"
+msgstr "発注参照は会社で一意である必要があります。"
 
 #. module: purchase
 #: model:process.transition,name:purchase.process_transition_purchaseinvoice0
@@ -1109,7 +1109,7 @@ msgstr "製品"
 #. module: purchase
 #: view:purchase.order:0
 msgid "Terms and conditions..."
-msgstr ""
+msgstr "諸条件..."
 
 #. module: purchase
 #: model:ir.model,name:purchase.model_stock_move
@@ -1364,7 +1364,7 @@ msgstr "生成された集荷リスト"
 #: model:ir.actions.act_window,name:purchase.purchase_line_form_action2
 #: model:ir.ui.menu,name:purchase.menu_purchase_line_order_draft
 msgid "On Purchase Order Lines"
-msgstr ""
+msgstr "発注明細ベース"
 
 #. module: purchase
 #: report:purchase.quotation:0
@@ -1386,7 +1386,7 @@ msgstr ""
 #. module: purchase
 #: model:ir.ui.menu,name:purchase.menu_product_pricelist_action2_purchase_type
 msgid "Price Types"
-msgstr ""
+msgstr "価格タイプ"
 
 #. module: purchase
 #: help:purchase.order,date_approve:0
@@ -1537,7 +1537,7 @@ msgstr ""
 #. module: purchase
 #: model:ir.ui.menu,name:purchase.menu_product_by_category_purchase_form
 msgid "Products by Category"
-msgstr "分類別製品"
+msgstr "カテゴリ別製品"
 
 #. module: purchase
 #: help:purchase.order.line,state:0
@@ -1663,7 +1663,7 @@ msgstr "デフォルト購買価格リストバージョン"
 #. module: purchase
 #: selection:purchase.order,invoice_method:0
 msgid "Based on generated draft invoice"
-msgstr "生成されたドラフト請求書に基づく"
+msgstr "生成ドラフト請求書基準"
 
 #. module: purchase
 #: model:ir.actions.act_window,name:purchase.action_stock_move_report_po
@@ -2004,7 +2004,7 @@ msgstr "ユーザの月別合計オーダー"
 #. module: purchase
 #: selection:purchase.order,invoice_method:0
 msgid "Based on incoming shipments"
-msgstr ""
+msgstr "入荷基準"
 
 #. module: purchase
 #: code:addons/purchase/purchase.py:1044
@@ -2128,7 +2128,7 @@ msgstr "2月"
 #: model:ir.actions.act_window,name:purchase.action_invoice_pending
 #: model:ir.ui.menu,name:purchase.menu_procurement_management_pending_invoice
 msgid "On Draft Invoices"
-msgstr ""
+msgstr "ドラフト請求書ベース"
 
 #. module: purchase
 #: model:ir.actions.act_window,name:purchase.action_purchase_order_report_all
