--- a/stock/i18n/ja.po
+++ b/stock/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-10 05:59+0000\n"
+"PO-Revision-Date: 2013-11-10 08:42+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-10 06:45+0000\n"
+"X-Launchpad-Export-Date: 2013-11-11 05:39+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: stock
@@ -887,7 +887,7 @@ msgstr ""
 #. module: stock
 #: view:product.category:0
 msgid "Account Stock Properties"
-msgstr ""
+msgstr "在庫関連勘定属性"
 
 #. module: stock
 #: sql_constraint:stock.picking:0
@@ -1192,7 +1192,7 @@ msgstr "左親"
 #. module: stock
 #: field:product.category,property_stock_valuation_account_id:0
 msgid "Stock Valuation Account"
-msgstr "在庫評価アカウント"
+msgstr "在庫評価勘定"
 
 #. module: stock
 #: view:stock.config.settings:0
@@ -1285,7 +1285,7 @@ msgstr ""
 #. module: stock
 #: report:stock.picking.list:0
 msgid "Internal Shipment :"
-msgstr ""
+msgstr "内部出荷："
 
 #. module: stock
 #: view:stock.inventory.line:0
@@ -1832,7 +1832,7 @@ msgstr "入荷："
 #. module: stock
 #: field:stock.location,valuation_out_account_id:0
 msgid "Stock Valuation Account (Outgoing)"
-msgstr "在庫評価アカウント（出庫）"
+msgstr "在庫評価勘定(出庫)"
 
 #. module: stock
 #: view:stock.return.picking.memory:0
@@ -1902,7 +1902,7 @@ msgstr "移動の作成"
 #. module: stock
 #: field:stock.location,valuation_in_account_id:0
 msgid "Stock Valuation Account (Incoming)"
-msgstr "在庫評価アカウント（入庫）"
+msgstr "在庫評価勘定(入庫)"
 
 #. module: stock
 #: model:stock.location,name:stock.stock_location_14
