--- a/account/i18n/ja.po
+++ b/account/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-11-10 09:05+0000\n"
+"PO-Revision-Date: 2013-11-11 16:29+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-11 05:38+0000\n"
+"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: account
@@ -926,7 +926,7 @@ msgstr "勘定分析仕訳帳"
 #. module: account
 #: view:account.invoice:0
 msgid "Send by Email"
-msgstr ""
+msgstr "Eメールで送信"
 
 #. module: account
 #: help:account.central.journal,amount_currency:0
@@ -1575,7 +1575,7 @@ msgstr ""
 #: selection:account.partner.balance,display_partner:0
 #: selection:account.report.general.ledger,display_account:0
 msgid "With balance is not equal to 0"
-msgstr "残高が0ではありません。"
+msgstr "残高があるもの(<>0)"
 
 #. module: account
 #: code:addons/account/account.py:1483
@@ -4408,7 +4408,7 @@ msgstr "平均レート"
 #: field:account.common.account.report,display_account:0
 #: field:account.report.general.ledger,display_account:0
 msgid "Display Accounts"
-msgstr "アカウントの表示"
+msgstr "表示対象勘定"
 
 #. module: account
 #: view:account.state.open:0
@@ -5761,7 +5761,7 @@ msgstr ""
 #: field:account.partner.ledger,initial_balance:0
 #: field:account.report.general.ledger,initial_balance:0
 msgid "Include Initial Balances"
-msgstr "期首残高を含む"
+msgstr "期初残高を含む"
 
 #. module: account
 #: view:account.invoice.tax:0
@@ -5986,7 +5986,7 @@ msgstr "チャートを開く"
 #: field:account.print.journal,amount_currency:0
 #: field:account.report.general.ledger,amount_currency:0
 msgid "With Currency"
-msgstr "通貨で"
+msgstr "通貨表示"
 
 #. module: account
 #: view:account.bank.statement:0
@@ -9881,13 +9881,13 @@ msgstr ""
 #: view:account.entries.report:0
 #: view:account.move.line:0
 msgid "Unreconciled"
-msgstr "未消し込み"
+msgstr "未消込"
 
 #. module: account
 #: code:addons/account/account_invoice.py:922
 #, python-format
 msgid "Bad total !"
-msgstr "合計が誤っています。"
+msgstr "合計が不正です。"
 
 #. module: account
 #: field:account.journal,sequence_id:0
@@ -10420,7 +10420,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:account.act_account_acount_move_line_open_unreconciled
 #, python-format
 msgid "Unreconciled Entries"
-msgstr "未消し込みエントリー"
+msgstr "未消込エントリ"
 
 #. module: account
 #: help:account.partner.reconcile.process,today_reconciled:0
@@ -10630,7 +10630,7 @@ msgstr ""
 #: report:account.general.ledger_landscape:0
 #: selection:account.report.general.ledger,display_account:0
 msgid "With movements"
-msgstr "変動"
+msgstr "変動があったもの"
 
 #. module: account
 #: view:account.tax.code.template:0
