--- a/delivery/i18n/fi.po
+++ b/delivery/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-09 15:16+0000\n"
+"PO-Revision-Date: 2013-11-12 05:53+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-10 06:44+0000\n"
+"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: delivery
@@ -30,7 +30,7 @@ msgstr "Toimitus postilla"
 #. module: delivery
 #: view:delivery.grid.line:0
 msgid " in Function of "
-msgstr ""
+msgstr " toiminto "
 
 #. module: delivery
 #: view:delivery.carrier:0
@@ -46,7 +46,7 @@ msgstr "Nettopaino"
 #. module: delivery
 #: model:ir.model,name:delivery.model_delivery_grid_line
 msgid "Delivery Grid Line"
-msgstr "Toimitustalukon rivi"
+msgstr "Toimitustaulukon rivi"
 
 #. module: delivery
 #: field:stock.move,weight_uom_id:0
@@ -108,7 +108,7 @@ msgstr "Edistyksellinen hinnoittelu"
 #. module: delivery
 #: help:delivery.grid,sequence:0
 msgid "Gives the sequence order when displaying a list of delivery grid."
-msgstr "Antaa järjestyksen näytettäessä luetteloa toimitustaulukosta"
+msgstr "Antaa järjestyksen näytettäessä luetteloa toimitustaulukosta."
 
 #. module: delivery
 #: view:delivery.grid:0
@@ -148,7 +148,7 @@ msgstr ""
 #. module: delivery
 #: report:sale.shipping:0
 msgid "Delivery Order :"
-msgstr "Toimitusjärjestys :"
+msgstr "Toimitustilaus :"
 
 #. module: delivery
 #: field:delivery.grid.line,variable_factor:0
@@ -244,7 +244,7 @@ msgid ""
 "If you don't 'Add in Quote', the exact price will be computed when invoicing "
 "based on delivery order(s)."
 msgstr ""
-"Jos et käytä 'Lisäys tarjoukseen' -toimintoa, tarkka hinta lasketaan kun "
+"Jos et käytä \"Lisäys tarjoukseen\" -toimintoa, tarkka hinta lasketaan kun "
 "laskutetaan toimitustilauksia."
 
 #. module: delivery
@@ -279,7 +279,7 @@ msgid ""
 "benefit from a free shipping"
 msgstr ""
 "Jos tilaus on arvokkaampi kuin tietty määrä, asiakas hyötyy ilmaisesta "
-"toimituksesta"
+"toimituksesta."
 
 #. module: delivery
 #: help:delivery.carrier,amount:0
@@ -367,7 +367,7 @@ msgstr ""
 msgid ""
 "Keep empty if the pricing depends on the advanced pricing per destination"
 msgstr ""
-"Jätä tyhjäksi jos hinnoittelu riippuu kohdekohtaisesta kehittyneestä "
+"Jätä tyhjäksi jos hinnoittelu riippuu kohdekohtaisesta edistyksellisestä "
 "hinnoittelusta"
 
 #. module: delivery
@@ -406,7 +406,7 @@ msgstr "Toimituspäivä"
 #. module: delivery
 #: field:delivery.carrier,product_id:0
 msgid "Delivery Product"
-msgstr "Kuljetustuote"
+msgstr "Toimitustuote"
 
 #. module: delivery
 #: view:delivery.grid.line:0
@@ -463,13 +463,15 @@ msgstr "Määrä"
 #. module: delivery
 #: field:delivery.grid,zip_from:0
 msgid "Start Zip"
-msgstr "Ensimmmäinen postinumero"
+msgstr "Alku pnro"
 
 #. module: delivery
 #: help:sale.order,carrier_id:0
 msgid ""
 "Complete this field if you plan to invoice the shipping based on picking."
 msgstr ""
+"Täytä tämä kenttä, jos suunnittelet laskuttavasi toimituksen keräilyn "
+"perusteella."
 
 #. module: delivery
 #: code:addons/delivery/delivery.py:136
@@ -503,8 +505,8 @@ msgid ""
 "If the active field is set to False, it will allow you to hide the delivery "
 "carrier without removing it."
 msgstr ""
-"Jos aktiivisen kentän tila on epätosi, voit piilottaa jakelijan poistamatta "
-"sitä."
+"Jos aktiivisen kentän tila on epätosi, voit piilottaa toimituksen jakelijan "
+"poistamatta sitä."
 
 #. module: delivery
 #: model:ir.actions.act_window,name:delivery.action_delivery_grid_form
@@ -550,7 +552,7 @@ msgstr "Hinnoittelutiedot"
 #. module: delivery
 #: field:delivery.carrier,use_detailed_pricelist:0
 msgid "Advanced Pricing per Destination"
-msgstr "Kehittynyt hinnoittelu kohteen mukaan"
+msgstr "Edistyksellinen hinnoittelu kohteen mukaan"
 
 #. module: delivery
 #: view:delivery.carrier:0
@@ -566,7 +568,7 @@ msgstr "Kuljetusliike"
 #: model:ir.actions.act_window,name:delivery.action_delivery_carrier_form
 #: model:ir.ui.menu,name:delivery.menu_action_delivery_carrier_form
 msgid "Delivery Methods"
-msgstr "Toimitusmenetelmät"
+msgstr "Toimitustavat"
 
 #. module: delivery
 #: code:addons/delivery/sale.py:57
@@ -598,13 +600,13 @@ msgstr "Tulosta toimitustilaus"
 #: view:delivery.grid:0
 #: field:delivery.grid,state_ids:0
 msgid "States"
-msgstr "Osavaltiot"
+msgstr "Tilat"
 
 #. module: delivery
 #: help:stock.move,weight_uom_id:0
 msgid ""
 "Unit of Measure (Unit of Measure) is the unit of measurement for Weight"
-msgstr ""
+msgstr "Yksikkö (Yksikkö) on painoyksikkö"
 
 #. module: delivery
 #: field:delivery.grid.line,price_type:0
