--- a/event_moodle/i18n/nl.po
+++ b/event_moodle/i18n/nl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-03-15 18:28+0000\n"
-"Last-Translator: Erwin van der Ploeg (Endian Solutions) <Unknown>\n"
+"PO-Revision-Date: 2013-11-11 11:33+0000\n"
+"Last-Translator: Jan Jurkus (GCE CAD-Service) <ict@gcecad-service.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 05:58+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
+"X-Generator: Launchpad (build 16820)\n"
 
 #. module: event_moodle
 #: view:event.moodle.config.wiz:0
@@ -33,6 +33,8 @@ msgid ""
 "URL where you have your moodle server. For exemple: 'http://127.0.0.1' or "
 "'http://localhost'"
 msgstr ""
+"URL waar uw moddle server te bereiken is. Bijvoorbeeld: 'http://127.0.0.1' "
+"of 'http://localhost'"
 
 #. module: event_moodle
 #: field:event.registration,moodle_user_password:0
@@ -72,6 +74,7 @@ msgstr "URL van  Moodle Server"
 #: help:event.moodle.config.wiz,url:0
 msgid "The url that will be used for the connection with moodle in xml-rpc"
 msgstr ""
+"De URL die gebruikt zal worden voor de verbinding met moodle via xml-rpc"
 
 #. module: event_moodle
 #: model:ir.model,name:event_moodle.model_event_registration
@@ -117,7 +120,7 @@ msgstr "Fout!"
 #: code:addons/event_moodle/event_moodle.py:105
 #, python-format
 msgid "You must configure your moodle connection."
-msgstr ""
+msgstr "U dient uw moodle verbinding in te stellen."
 
 #. module: event_moodle
 #: field:event.moodle.config.wiz,moodle_username:0
