--- a/l10n_be/i18n/nl.po
+++ b/l10n_be/i18n/nl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-24 02:53+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-11 16:13+0000\n"
+"Last-Translator: Jan Jurkus (GCE CAD-Service) <ict@gcecad-service.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:04+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
+"X-Generator: Launchpad (build 16820)\n"
 
 #. module: l10n_be
 #: model:account.financial.report,name:l10n_be.account_financial_report_appro_mbsd3
@@ -60,7 +60,7 @@ msgstr ""
 #: view:partner.vat.list:0
 #: field:partner.vat.list,comments:0
 msgid "Comments"
-msgstr ""
+msgstr "Opmerkingen"
 
 #. module: l10n_be
 #: model:account.financial.report,name:l10n_be.account_financial_report_primesdmission2
@@ -126,7 +126,7 @@ msgstr ""
 #: code:addons/l10n_be/wizard/l10n_be_partner_vat_listing.py:317
 #, python-format
 msgid "No record to print."
-msgstr ""
+msgstr "Geen record om af te drukken."
 
 #. module: l10n_be
 #: model:account.financial.report,name:l10n_be.account_financial_report_rserves2
@@ -141,7 +141,7 @@ msgstr ""
 #. module: l10n_be
 #: model:account.financial.report,name:l10n_be.account_financial_report_installationsmachinesetoutillage2
 msgid "Installations, machines et outillage"
-msgstr ""
+msgstr "Installaties, machines en uitrusting"
 
 #. module: l10n_be
 #: help:l1on_be.vat.declaration,client_nihil:0
@@ -185,7 +185,7 @@ msgstr ""
 #: code:addons/l10n_be/wizard/l10n_be_vat_intra.py:116
 #, python-format
 msgid "Error!"
-msgstr ""
+msgstr "Fout!"
 
 #. module: l10n_be
 #: code:addons/l10n_be/wizard/l10n_be_account_vat_declaration.py:112
@@ -200,7 +200,7 @@ msgstr ""
 #: code:addons/l10n_be/wizard/l10n_be_vat_intra.py:246
 #, python-format
 msgid "Insufficient Data!"
-msgstr ""
+msgstr "Onvoldoende Gegevens!"
 
 #. module: l10n_be
 #: model:account.financial.report,name:l10n_be.account_financial_report_effetspayer4
@@ -302,7 +302,7 @@ msgstr "Periode(s)"
 #: code:addons/l10n_be/wizard/l10n_be_partner_vat_listing.py:94
 #, python-format
 msgid "No data found for the selected year."
-msgstr ""
+msgstr "Geen gegevens gevonden voor het geselecteerde jaar."
 
 #. module: l10n_be
 #: model:account.financial.report,name:l10n_be.account_financial_report_actifsimmobilises0
@@ -934,7 +934,7 @@ msgstr ""
 #. module: l10n_be
 #: view:partner.vat.list:0
 msgid "Annual Listing of VAT-Subjected Customers"
-msgstr ""
+msgstr "Jaarlijkse listing van BTW-plichtige klanten"
 
 #. module: l10n_be
 #: model:account.financial.report,name:l10n_be.account_financial_report_mobilieretmatrielroulant2
