--- a/mrp/i18n/fi.po
+++ b/mrp/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-10 09:17+0000\n"
+"PO-Revision-Date: 2013-11-12 05:34+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-11 05:38+0000\n"
+"X-Launchpad-Export-Date: 2013-11-12 06:23+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: mrp
@@ -94,7 +94,7 @@ msgstr "MRP-työpiste"
 #: model:ir.actions.act_window,name:mrp.mrp_routing_action
 #: model:ir.ui.menu,name:mrp.menu_mrp_routing_action
 msgid "Routings"
-msgstr "Reititykset"
+msgstr "Vaiheet"
 
 #. module: mrp
 #: view:mrp.bom:0
@@ -120,7 +120,7 @@ msgid ""
 "of the routing."
 msgstr ""
 "Kierrosten määrä joka tämän työpisteen pitää tehdä suorittaakseen "
-"määritellyn reitityksen."
+"määritellyn vaiheistukset."
 
 #. module: mrp
 #: view:product.product:0
@@ -326,7 +326,7 @@ msgstr "Tuntimäärä"
 #. module: mrp
 #: field:mrp.production,product_lines:0
 msgid "Scheduled goods"
-msgstr "Aikataulutetut tuotteet"
+msgstr "Ajoitetut tavarat"
 
 #. module: mrp
 #: selection:mrp.bom,type:0
@@ -573,7 +573,7 @@ msgstr "Tuotteen tyyppi on palvelu"
 #. module: mrp
 #: help:mrp.workcenter,costs_cycle:0
 msgid "Specify Cost of Work Center per cycle."
-msgstr "Määrittele työpisteen syklin kustannukset"
+msgstr "Määrittele työpisteen kierroksen kustannukset"
 
 #. module: mrp
 #: model:process.transition,name:mrp.process_transition_bom0
@@ -606,7 +606,7 @@ msgid ""
 "The Bill of Material is linked to a routing, i.e. the succession of work "
 "centers."
 msgstr ""
-"Osaluettelo on linkitetty reititykseen, eli työpisteiden järjestykseen"
+"Osaluettelo on linkitetty vaiheistukseen, esim. työpisteiden järjestykseen"
 
 #. module: mrp
 #: view:mrp.production:0
@@ -649,7 +649,7 @@ msgstr "Hae tuotannosta"
 #: help:mrp.routing.workcenter,sequence:0
 msgid ""
 "Gives the sequence order when displaying a list of routing Work Centers."
-msgstr "Antaa järjestyksen, kun näytetään luettelo työpisteistä."
+msgstr "Antaa järjestyksen, kun näytetään luettelo vaiheistustyöpisteistä."
 
 #. module: mrp
 #: field:mrp.bom,child_complete_ids:0
@@ -678,7 +678,7 @@ msgstr ""
 #. module: mrp
 #: selection:mrp.production,state:0
 msgid "Picking Exception"
-msgstr "Keräilyero"
+msgstr "Keräilypoikkeus"
 
 #. module: mrp
 #: field:mrp.bom,bom_lines:0
@@ -696,13 +696,13 @@ msgid ""
 "If the active field is set to False, it will allow you to hide the routing "
 "without removing it."
 msgstr ""
-"Jos kentän arvo on epätosi, sallii reitityksen piilottamisen ilman sen "
+"Jos kentän arvo on epätosi, sallii vaiheistuksen piilottamisen ilman sen "
 "poistamista."
 
 #. module: mrp
 #: model:process.transition,name:mrp.process_transition_billofmaterialrouting0
 msgid "Material Routing"
-msgstr "Materiaalien reititys"
+msgstr "Materiaalien vaiheistus"
 
 #. module: mrp
 #: view:mrp.production:0
@@ -1122,7 +1122,7 @@ msgstr "Myöhässä"
 #. module: mrp
 #: model:process.node,name:mrp.process_node_servicemts0
 msgid "Make to stock"
-msgstr "Valmista varastoon"
+msgstr "Varastoon tuotanto"
 
 #. module: mrp
 #: report:bom.structure:0
@@ -1166,12 +1166,12 @@ msgstr "Nimi"
 #. module: mrp
 #: report:mrp.production.order:0
 msgid "Production Order N° :"
-msgstr "Tuotantotilaus nro:"
+msgstr "Tuotantotilausnro:"
 
 #. module: mrp
 #: field:mrp.product.produce,mode:0
 msgid "Mode"
-msgstr "Toimintatapa"
+msgstr "Toimintatila"
 
 #. module: mrp
 #: help:mrp.bom,message_ids:0
@@ -1207,7 +1207,7 @@ msgid ""
 "Center represents a team of 5 workers, the capacity per cycle is 5."
 msgstr ""
 "Työpisteen samanaikaisten rinnakkaisten työvaiheiden määrä. Jos työpisteellä "
-"on 5 henkilöä, kapasiteetti on 5."
+"on 5 työntekijää, kierroksen kapasiteetti on 5."
 
 #. module: mrp
 #: model:ir.actions.act_window,name:mrp.mrp_production_action3
@@ -1267,7 +1267,7 @@ msgid ""
 "Time in hours for this Work Center to achieve the operation of the specified "
 "routing."
 msgstr ""
-"Tuntimäärä jonka aikana tämä työpiste suorittaa reitityksessä määritellyn "
+"Tuntimäärä jonka aikana tämä työpiste suorittaa vaiheistuksessa määritellyn "
 "toiminnon."
 
 #. module: mrp
@@ -1355,9 +1355,9 @@ msgid ""
 "Routing is indicated then,the third tab of a production order (Work Centers) "
 "will be automatically pre-completed."
 msgstr ""
-"Reititys ilmoittaa kaikki käytettävät työpisteet, käytettävän ajan ja/tai "
-"kierron. Ja jos reititys näytetään, niin kolmas tuotantotilauksen välilehti "
-"(työpisteet) merkitään automaattisesti esivalmiiksi."
+"Vaiheistus ilmoittaa kaikki käytettävät työpisteet, käytettävän ajan ja/tai "
+"kierron. Ja jos vaiheistus näytetään, niin kolmas tuotantotilauksen "
+"välilehti (työpisteet) merkitään automaattisesti esivalmiiksi."
 
 #. module: mrp
 #: code:addons/mrp/mrp.py:505
@@ -1372,8 +1372,8 @@ msgid ""
 "maxi quantity. It's available in the Inventory management menu and "
 "configured by product."
 msgstr ""
-"Minimivarastosääntö on automaattinen hankintasääntö, joka perustuu minimi ja "
-"maksimi varastomääriin. Se on käytettävissä varastohallinnan valikossa ja "
+"Minimivarastosääntö on automaattinen hankintasääntö, joka perustuu minimi- "
+"ja maksimivarastomääriin. Se on käytettävissä varastohallinnan valikossa ja "
 "määritetään tuotteittain."
 
 #. module: mrp
@@ -1404,8 +1404,8 @@ msgid ""
 "Bill of Materials allow you to define the list of required raw materials to "
 "make a finished product."
 msgstr ""
-"Osaluettelot sallii valmistuotteiden valmistuksessa tarvittavien raaka-"
-"aineiden luettelon määrittelyn."
+"Osaluettelot sallii tuotteiden valmistuksessa tarvittavien raaka-aineiden "
+"luettelon määrittelyn."
 
 #. module: mrp
 #: code:addons/mrp/mrp.py:375
@@ -1416,7 +1416,7 @@ msgstr "%s (kopio)"
 #. module: mrp
 #: model:ir.model,name:mrp.model_mrp_production_product_line
 msgid "Production Scheduled Product"
-msgstr "Tuotannon aikataulutettu tuote"
+msgstr "Tuotantoajoitettu tuote"
 
 #. module: mrp
 #: code:addons/mrp/report/price.py:204
@@ -1434,7 +1434,7 @@ msgstr "Turvapäivät jokaiselle tuotannon toiminnolle."
 #: model:process.transition,name:mrp.process_transition_servicemts0
 #: model:process.transition,name:mrp.process_transition_stockmts0
 msgid "Make to Stock"
-msgstr "Valmista varastoon"
+msgstr "Varastoon tuotanto"
 
 #. module: mrp
 #: constraint:mrp.production:0
@@ -1589,7 +1589,7 @@ msgstr "Yleinen tili"
 #. module: mrp
 #: report:mrp.production.order:0
 msgid "SO Number"
-msgstr "Myyntitilaus nro"
+msgstr "Myyntitilausnro"
 
 #. module: mrp
 #: code:addons/mrp/mrp.py:505
@@ -1719,7 +1719,7 @@ msgstr "Tuotanto"
 #: model:process.transition,name:mrp.process_transition_servicemto0
 #: model:process.transition,name:mrp.process_transition_stockproduct0
 msgid "Make to Order"
-msgstr "Valmista tilaukselle"
+msgstr "Tilausohjautuva tuotanto"
 
 #. module: mrp
 #: help:mrp.workcenter,note:0
@@ -1798,7 +1798,7 @@ msgstr "Lähteen paikka"
 #: view:mrp.production:0
 #: view:mrp.production.product.line:0
 msgid "Scheduled Products"
-msgstr "Aikataulutetut tuotteet"
+msgstr "Ajoitetut tuotteet"
 
 #. module: mrp
 #: model:res.groups,name:mrp.group_mrp_manager
@@ -1824,7 +1824,7 @@ msgstr "Työtilaukset"
 #. module: mrp
 #: field:mrp.workcenter,costs_cycle:0
 msgid "Cost per cycle"
-msgstr "Kustannus per kierto"
+msgstr "Kustannus per kierros"
 
 #. module: mrp
 #: model:process.node,name:mrp.process_node_serviceproduct0
@@ -1885,7 +1885,7 @@ msgstr "Oletysyksikkö"
 #. module: mrp
 #: field:mrp.workcenter,time_cycle:0
 msgid "Time for 1 cycle (hour)"
-msgstr "Yhden kierron aika (tuntia)"
+msgstr "Yhden kierroksen aika (tuntia)"
 
 #. module: mrp
 #: view:mrp.production:0
@@ -1987,8 +1987,7 @@ msgid ""
 "orders."
 msgstr ""
 "Viikottainen varastonarvon vaihtelu mahdollistaa varaston arvon muutosten "
-"seurannan joka on linkitetty valmistustoimintoihin, vastaanottoihin ja "
-"toimituksiin."
+"seurannan liittyen valmistustoimintoihin, vastaanottoihin ja toimituksiin."
 
 #. module: mrp
 #: view:mrp.product.produce:0
@@ -2019,7 +2018,7 @@ msgstr ""
 #. module: mrp
 #: field:mrp.bom,product_rounding:0
 msgid "Product Rounding"
-msgstr "Tuotteen pyöristys"
+msgstr "Määrän pyöristys"
 
 #. module: mrp
 #: selection:mrp.production,state:0
@@ -2071,7 +2070,7 @@ msgstr "Määrä yhteensä"
 #: field:mrp.routing.workcenter,hour_nbr:0
 #: field:report.workcenter.load,hour:0
 msgid "Number of Hours"
-msgstr "Tuntien lukumäärä"
+msgstr "Tuntimäärä"
 
 #. module: mrp
 #: view:mrp.workcenter:0
@@ -2091,7 +2090,7 @@ msgstr "Tuotemäärää on pyöristetty"
 #. module: mrp
 #: model:process.node,note:mrp.process_node_stock0
 msgid "Assignment from Production or Purchase Order."
-msgstr "Määritys tuotannosta tai ostotilaukselta."
+msgstr "Tehtäväksianto tuotannosta tai ostotilaukselta."
 
 #. module: mrp
 #: model:ir.actions.act_window,help:mrp.mrp_bom_form_action
@@ -2115,7 +2114,7 @@ msgstr ""
 #. module: mrp
 #: field:mrp.routing.workcenter,routing_id:0
 msgid "Parent Routing"
-msgstr "Ylempi reititys"
+msgstr "päävaiheistus"
 
 #. module: mrp
 #: help:mrp.workcenter,time_start:0
@@ -2145,7 +2144,7 @@ msgstr "Osaluettelo"
 #: model:ir.model,name:mrp.model_report_mrp_inout
 #: view:report.mrp.inout:0
 msgid "Stock value variation"
-msgstr "Varaston arvon variaatio"
+msgstr "varastoarvoero"
 
 #. module: mrp
 #: model:process.node,note:mrp.process_node_mts0
@@ -2157,7 +2156,7 @@ msgstr "Varastosta otto"
 #: code:addons/mrp/report/price.py:139
 #, python-format
 msgid "Cost Price per Unit of Measure"
-msgstr "Kustannushinta per yksikkö"
+msgstr "Omakustannushinta per yksikkö"
 
 #. module: mrp
 #: field:report.mrp.inout,date:0
@@ -2215,8 +2214,8 @@ msgid ""
 "You are going to produce total %s quantities of \"%s\".\n"
 "But you can only produce up to total %s quantities."
 msgstr ""
-"Olet valmistamassa yhteensä %s määrän \"%s\".\n"
-"Mutta voit valmistaan vain %s."
+"Aiot valmistamaa yhteensä %s tuotetta \"%s\".\n"
+"Mutta voit valmistaan enintään %s."
 
 #. module: mrp
 #: model:process.node,note:mrp.process_node_stockproduct0
@@ -2290,7 +2289,7 @@ msgid ""
 "Product UOS (Unit of Sale) is the unit of measurement for the invoicing and "
 "promotion of stock."
 msgstr ""
-"Tuotteen myyntierä (uos) on yksikkömääritelmä laskutusta ja varastointia "
+"Tuotteen myyntiyksikkö (my) on yksikkömääritelmä laskutusta ja varastointia "
 "varten."
 
 #. module: mrp
@@ -2308,7 +2307,7 @@ msgstr "Työtilaus"
 #. module: mrp
 #: view:board.board:0
 msgid "Procurements in Exception"
-msgstr "Poikkeavat hankinnat"
+msgstr "Hankinnoissa poikkeama"
 
 #. module: mrp
 #: model:ir.model,name:mrp.model_mrp_product_price
@@ -2389,7 +2388,7 @@ msgstr "Sallii tuotteelle useita ominaisuuksiin perustuvia osaluetteloita"
 #: model:ir.actions.act_window,name:mrp.mrp_property_group_action
 #: model:ir.ui.menu,name:mrp.menu_mrp_property_group_action
 msgid "Property Groups"
-msgstr "Omaisuusryhmät"
+msgstr "Ominaisuusryhmät"
 
 #. module: mrp
 #: model:ir.model,name:mrp.model_mrp_routing
@@ -2400,7 +2399,7 @@ msgstr "Omaisuusryhmät"
 #: view:mrp.routing:0
 #: model:process.node,name:mrp.process_node_routing0
 msgid "Routing"
-msgstr "Reititys"
+msgstr "Vaiheistus"
 
 #. module: mrp
 #: model:process.transition,note:mrp.process_transition_procurestockableproduct0
@@ -2444,9 +2443,9 @@ msgid ""
 "production order creates as much procurement orders as components listed in "
 "the BOM, through a run of the schedulers (MRP)."
 msgstr ""
-"Raaka-aineiden toimittamiseksi (osto tai valmistus) tuotantotilaus luo "
-"jokaiselle osaluettelossa luetellulle komponentille oman hankintatilauksen "
-"automaattisesti vuorottajan (MRP scheduler) toimesta."
+"Raaka-aineiden toimittamiseksi (osta tai valmista) tuotantotilaus luo "
+"jokaiselle osaluettelossa luetellulle komponentille oman hankintatilauksensa "
+"automaattisesti ajoittajan toimesta."
 
 #. module: mrp
 #: help:mrp.product_price,number:0
@@ -2455,7 +2454,7 @@ msgid ""
 "will be displayed base on this quantity."
 msgstr ""
 "Määritä ostettavien tai hankittavien tuotteiden määrä. "
-"Kustannusrakenneraportti tulostuu tämän määrän mukaisesti."
+"Kustannusrakenneraportti näytetään tämän määrän mukaisesti."
 
 #. module: mrp
 #: selection:mrp.bom,method:0
@@ -2473,12 +2472,12 @@ msgstr "Järjestys"
 #. module: mrp
 #: model:ir.ui.menu,name:mrp.menu_view_resource_calendar_leaves_search_mrp
 msgid "Resource Leaves"
-msgstr "Resurssin lomat"
+msgstr "Työntekijän lomat"
 
 #. module: mrp
 #: help:mrp.bom,sequence:0
 msgid "Gives the sequence order when displaying a list of bills of material."
-msgstr "Antaa järjestyksen näytettäessä osaluetteloa"
+msgstr "Antaa esitysjärjestyksen näytettäessä osaluetteloita."
 
 #. module: mrp
 #: model:ir.model,name:mrp.model_mrp_config_settings
