--- a/l10n_pe/i18n/nl.po
+++ b/l10n_pe/i18n/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-24 02:53+0000\n"
-"PO-Revision-Date: 2013-11-12 02:05+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-12 08:45+0000\n"
+"Last-Translator: Jan Jurkus (GCE CAD-Service) <ict@gcecad-service.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
+"X-Launchpad-Export-Date: 2013-11-13 06:08+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: l10n_pe
@@ -100,7 +100,7 @@ msgstr ""
 #. module: l10n_pe
 #: model:account.account.type,name:l10n_pe.account_account_type_BG_PTN_10
 msgid "Capital"
-msgstr ""
+msgstr "Kapitaal"
 
 #. module: l10n_pe
 #: model:account.account.type,name:l10n_pe.account_account_type_NCLASIFICADO
@@ -385,7 +385,7 @@ msgstr ""
 #. module: l10n_pe
 #: model:account.account.type,name:l10n_pe.account_account_type_view
 msgid "Vista"
-msgstr ""
+msgstr "Weergave"
 
 #. module: l10n_pe
 #: model:account.account.type,name:l10n_pe.account_account_type_EGP_NA_080
