--- a/l10n_be_hr_payroll/i18n/nl.po
+++ b/l10n_be_hr_payroll/i18n/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-24 02:53+0000\n"
-"PO-Revision-Date: 2013-11-11 21:16+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-12 08:11+0000\n"
+"Last-Translator: Jan Jurkus (GCE CAD-Service) <ict@gcecad-service.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
+"X-Launchpad-Export-Date: 2013-11-13 06:08+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: l10n_be_hr_payroll
@@ -120,12 +120,12 @@ msgstr ""
 #. module: l10n_be_hr_payroll
 #: field:hr.contract,travel_reimbursement_amount:0
 msgid "Reimbursement of travel expenses"
-msgstr ""
+msgstr "Vergoeding van reiskosten"
 
 #. module: l10n_be_hr_payroll
 #: constraint:hr.contract:0
 msgid "Error! Contract start-date must be less than contract end-date."
-msgstr ""
+msgstr "Fout! Contract startdatum moet voor de einddatum liggen."
 
 #. module: l10n_be_hr_payroll
 #: field:hr.employee,spouse_fiscal_status:0
