--- a/l10n_br/i18n/nl.po
+++ b/l10n_br/i18n/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-24 02:53+0000\n"
-"PO-Revision-Date: 2013-11-11 21:11+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-12 08:35+0000\n"
+"Last-Translator: Jan Jurkus (GCE CAD-Service) <ict@gcecad-service.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
+"X-Launchpad-Export-Date: 2013-11-13 06:08+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: l10n_br
@@ -42,7 +42,7 @@ msgstr ""
 #: model:ir.model,name:l10n_br.model_account_tax_code
 #: field:l10n_br_account.cst,tax_code_id:0
 msgid "Tax Code"
-msgstr ""
+msgstr "Belastingcode"
 
 #. module: l10n_br
 #: help:account.tax.code,domain:0
@@ -51,6 +51,9 @@ msgid ""
 "This field is only used if you develop your own module allowing developers "
 "to create specific taxes in a custom domain."
 msgstr ""
+"Dit veld wordt alleen gebruikt als u uw eigen module ontwikkeld die "
+"ontwikkelaars in staat stelt om specifieke belastingen in een aangepast "
+"domein aan te maken."
 
 #. module: l10n_br
 #: model:account.account.type,name:l10n_br.resultado
@@ -60,18 +63,18 @@ msgstr ""
 #. module: l10n_br
 #: model:ir.model,name:l10n_br.model_account_tax_template
 msgid "account.tax.template"
-msgstr ""
+msgstr "account.tax.template"
 
 #. module: l10n_br
 #: model:account.account.type,name:l10n_br.passivo
 msgid "Passivo"
-msgstr ""
+msgstr "Passiva"
 
 #. module: l10n_br
 #: field:l10n_br_account.cst,name:0
 #: field:l10n_br_account.cst.template,name:0
 msgid "Description"
-msgstr ""
+msgstr "Beschrijving"
 
 #. module: l10n_br
 #: constraint:account.tax.code:0
@@ -79,6 +82,8 @@ msgid ""
 "Error!\n"
 "You cannot create recursive accounts."
 msgstr ""
+"Fout!\n"
+"Het is niet mogelijk om recursieve rekeningen te maken."
 
 #. module: l10n_br
 #: field:account.tax,amount_mva:0
@@ -91,6 +96,7 @@ msgstr ""
 #: help:account.tax.template,base_reduction:0
 msgid "For taxes of type percentage, enter % ratio between 0-1."
 msgstr ""
+"Voor belastingen van het type percentage, geef een % ratio in van 0-1."
 
 #. module: l10n_br
 #: field:account.tax,base_reduction:0
@@ -106,7 +112,7 @@ msgstr ""
 #. module: l10n_br
 #: model:ir.model,name:l10n_br.model_account_tax
 msgid "account.tax"
-msgstr ""
+msgstr "account.tax"
 
 #. module: l10n_br
 #: model:account.account.type,name:l10n_br.receita
@@ -124,7 +130,7 @@ msgstr ""
 #. module: l10n_br
 #: model:ir.model,name:l10n_br.model_wizard_multi_charts_accounts
 msgid "wizard.multi.charts.accounts"
-msgstr ""
+msgstr "wizard.multi.charts.accounts"
 
 #. module: l10n_br
 #: model:ir.actions.todo,note:l10n_br.config_call_account_template_brazilian_localization
@@ -144,6 +150,8 @@ msgid ""
 "Error!\n"
 "You cannot create recursive Tax Codes."
 msgstr ""
+"Fout!\n"
+"U kunt geen recursieve belastingrubrieken aanmaken."
 
 #. module: l10n_br
 #: help:account.tax,tax_discount:0
@@ -168,7 +176,7 @@ msgstr ""
 #: field:l10n_br_account.cst,code:0
 #: field:l10n_br_account.cst.template,code:0
 msgid "Code"
-msgstr ""
+msgstr "Code"
 
 #. module: l10n_br
 #: help:account.tax,amount_mva:0
