--- a/l10n_hn/i18n/nl.po
+++ b/l10n_hn/i18n/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-24 02:53+0000\n"
-"PO-Revision-Date: 2013-11-11 08:36+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-12 08:37+0000\n"
+"Last-Translator: Jan Jurkus (GCE CAD-Service) <ict@gcecad-service.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
+"X-Launchpad-Export-Date: 2013-11-13 06:08+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: l10n_hn
@@ -35,12 +35,12 @@ msgstr ""
 #. module: l10n_hn
 #: model:account.account.type,name:l10n_hn.cuenta_capital
 msgid "Capital"
-msgstr ""
+msgstr "Kapitaal"
 
 #. module: l10n_hn
 #: model:account.account.type,name:l10n_hn.cuenta_pasivo
 msgid "Pasivo"
-msgstr ""
+msgstr "Passiva"
 
 #. module: l10n_hn
 #: model:account.account.type,name:l10n_hn.cuenta_ingresos
@@ -50,7 +50,7 @@ msgstr ""
 #. module: l10n_hn
 #: model:account.account.type,name:l10n_hn.cuenta_activo
 msgid "Activo"
-msgstr ""
+msgstr "Activa"
 
 #. module: l10n_hn
 #: model:account.account.type,name:l10n_hn.cuenta_gastos
