--- a/l10n_it/i18n/nl.po
+++ b/l10n_it/i18n/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-12-23 09:56+0000\n"
-"PO-Revision-Date: 2013-11-11 08:39+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-12 08:45+0000\n"
+"Last-Translator: Jan Jurkus (GCE CAD-Service) <ict@gcecad-service.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
+"X-Launchpad-Export-Date: 2013-11-13 06:08+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: l10n_it
@@ -53,6 +53,15 @@ msgid ""
 "Management/Configuration/Financial Accounting/Financial Accounts/Generate "
 "Chart of Accounts from a Chart Template."
 msgstr ""
+"Genereer een Rekeningschema van een Grootboekrekeningensjabloon. Er zal U "
+"gevraagd worden wat de naam is van het bedrijf, welk rekeningschema sjabloon "
+"u wenst te gebruiken, uit hoeveel cijfers de rekeningen mogen bestaan, uw "
+"bankrekeningnummer en welke munteenheid gebruikt dient te worden bij het "
+"maken van dagboeken. Zo wordt een zuiver Grootboekrekeningschema "
+"gegenereerd.\n"
+"\tDit is dezelfde wizard die gebruikt wordt als die onder Financieel "
+"Beheer/Instellingen/Boekhouden/Rekeningschema/Genereer Rekeningschema van "
+"Sjabloon."
 
 #. module: l10n_it
 #: model:account.account.type,name:l10n_it.account_type_tax
