--- a/l10n_ma/i18n/nl.po
+++ b/l10n_ma/i18n/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-24 02:53+0000\n"
-"PO-Revision-Date: 2013-11-11 08:57+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-12 08:46+0000\n"
+"Last-Translator: Jan Jurkus (GCE CAD-Service) <ict@gcecad-service.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
+"X-Launchpad-Export-Date: 2013-11-13 06:08+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: l10n_ma
@@ -35,7 +35,7 @@ msgstr ""
 #. module: l10n_ma
 #: model:account.account.type,name:l10n_ma.cpt_type_vue
 msgid "Vue"
-msgstr ""
+msgstr "Weergave"
 
 #. module: l10n_ma
 #: model:account.account.type,name:l10n_ma.cpt_type_dct
@@ -45,7 +45,7 @@ msgstr ""
 #. module: l10n_ma
 #: sql_constraint:l10n.ma.report:0
 msgid "The code report must be unique !"
-msgstr ""
+msgstr "De rapportagecode moet uniek zijn!"
 
 #. module: l10n_ma
 #: model:account.account.type,name:l10n_ma.cpt_type_stk
@@ -55,12 +55,12 @@ msgstr ""
 #. module: l10n_ma
 #: field:l10n.ma.line,code:0
 msgid "Variable Name"
-msgstr ""
+msgstr "Naam variabele"
 
 #. module: l10n_ma
 #: field:l10n.ma.line,definition:0
 msgid "Definition"
-msgstr ""
+msgstr "Definitie"
 
 #. module: l10n_ma
 #: model:account.account.type,name:l10n_ma.cpt_type_dlt
@@ -71,22 +71,22 @@ msgstr ""
 #: field:l10n.ma.line,name:0
 #: field:l10n.ma.report,name:0
 msgid "Name"
-msgstr ""
+msgstr "Naam"
 
 #. module: l10n_ma
 #: field:l10n.ma.report,line_ids:0
 msgid "Lines"
-msgstr ""
+msgstr "Regels"
 
 #. module: l10n_ma
 #: model:account.account.type,name:l10n_ma.cpt_type_tax
 msgid "Taxes"
-msgstr ""
+msgstr "Belastingen"
 
 #. module: l10n_ma
 #: field:l10n.ma.line,report_id:0
 msgid "Report"
-msgstr ""
+msgstr "Rapport"
 
 #. module: l10n_ma
 #: model:ir.model,name:l10n_ma.model_l10n_ma_line
@@ -96,7 +96,7 @@ msgstr ""
 #. module: l10n_ma
 #: sql_constraint:l10n.ma.line:0
 msgid "The variable name must be unique !"
-msgstr ""
+msgstr "De naam van de variabele moet uniek zijn!"
 
 #. module: l10n_ma
 #: model:ir.model,name:l10n_ma.model_l10n_ma_report
@@ -106,7 +106,7 @@ msgstr ""
 #. module: l10n_ma
 #: field:l10n.ma.report,code:0
 msgid "Code"
-msgstr ""
+msgstr "Code"
 
 #. module: l10n_ma
 #: model:account.account.type,name:l10n_ma.cpt_type_per
