--- a/l10n_syscohada/i18n/nl.po
+++ b/l10n_syscohada/i18n/nl.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2012-11-24 02:53+0000\n"
-"PO-Revision-Date: 2013-11-11 08:30+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-12 07:48+0000\n"
+"Last-Translator: Jan Jurkus (GCE CAD-Service) <ict@gcecad-service.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
+"X-Launchpad-Export-Date: 2013-11-13 06:08+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: l10n_syscohada
@@ -35,7 +35,7 @@ msgstr ""
 #. module: l10n_syscohada
 #: model:account.account.type,name:l10n_syscohada.account_type_expense
 msgid "Expense"
-msgstr ""
+msgstr "Declaratie"
 
 #. module: l10n_syscohada
 #: model:account.account.type,name:l10n_syscohada.account_type_stock
@@ -45,17 +45,17 @@ msgstr ""
 #. module: l10n_syscohada
 #: model:account.account.type,name:l10n_syscohada.account_type_income
 msgid "Income"
-msgstr ""
+msgstr "Inkomsten"
 
 #. module: l10n_syscohada
 #: model:account.account.type,name:l10n_syscohada.account_type_tax
 msgid "Tax"
-msgstr ""
+msgstr "Belasting"
 
 #. module: l10n_syscohada
 #: model:account.account.type,name:l10n_syscohada.account_type_cash
 msgid "Cash"
-msgstr ""
+msgstr "Kas"
 
 #. module: l10n_syscohada
 #: model:account.account.type,name:l10n_syscohada.account_type_immobilisations
@@ -75,17 +75,17 @@ msgstr ""
 #. module: l10n_syscohada
 #: model:account.account.type,name:l10n_syscohada.account_type_asset
 msgid "Asset"
-msgstr ""
+msgstr "Activa"
 
 #. module: l10n_syscohada
 #: model:account.account.type,name:l10n_syscohada.account_type_view
 msgid "View"
-msgstr ""
+msgstr "Weergave"
 
 #. module: l10n_syscohada
 #: model:account.account.type,name:l10n_syscohada.account_type_equity
 msgid "Equity"
-msgstr ""
+msgstr "Vermogen"
 
 #. module: l10n_syscohada
 #: model:account.account.type,name:l10n_syscohada.account_type_cloture
