--- a/mrp/i18n/fi.po
+++ b/mrp/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-12 05:34+0000\n"
+"PO-Revision-Date: 2013-11-12 19:55+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-12 06:23+0000\n"
+"X-Launchpad-Export-Date: 2013-11-13 06:08+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: mrp
@@ -175,7 +175,7 @@ msgstr "Viimeisteltävät tuotteet"
 #. module: mrp
 #: selection:mrp.bom,method:0
 msgid "Set / Pack"
-msgstr "Sarja / Pakkaus"
+msgstr "Setti / Pakkaus"
 
 #. module: mrp
 #: field:mrp.workcenter,costs_hour:0
@@ -331,7 +331,7 @@ msgstr "Ajoitetut tavarat"
 #. module: mrp
 #: selection:mrp.bom,type:0
 msgid "Sets / Phantom"
-msgstr "Sarja / Haamu"
+msgstr "Setit / Haamu"
 
 #. module: mrp
 #: view:mrp.production:0
@@ -524,6 +524,18 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Klikkaa luodaksesi uuden ominaisuuden.\n"
+"              </p><p>\n"
+"                Ominaisuuksia käytetään OpenERP:issä valitsemaan oikea\n"
+"                osaluettelo tuotteen valmistamiseksi, kun saman tuotteen \n"
+"                voi valmistaa eri kokoonpanoilla. Voit asettaa useita \n"
+"                ominaisuuksia kullekin osaluettelolle. Kun myyjä luo \n"
+"                myyntitilauksen, voi sille antaa useita ominaisuuksia. \n"
+"                ja OpenERP valitsee automaattisesti osaluettelon \n"
+"                kulloiseenkin tarpeeseen.\n"
+"              </p>\n"
+"            "
 
 #. module: mrp
 #: view:mrp.production:0
@@ -674,6 +686,14 @@ msgid ""
 "assembly operation.\n"
 "                This installs the module stock_no_autopicking."
 msgstr ""
+"Tämä moduli sallii välittömän keräilyprosessin, jotta valmistustilaukselle "
+"saadaan tarvittavat raaka-aineet/komponentit. \n"
+"                Esim. toimittajien (alihankkijoiden) tuotannon hallinta:\n"
+"                Tämän toteuttamiseksi alihankittava, valmistettava tuote, "
+"määritellään \"Ei automaatista keräilyä\"\n"
+"                ja toimittajan toimipaikka asetetaan vaiheelle "
+"kokoonpanopaikaksi.\n"
+"                Tämä asentaa stock_no_autopicking-moduulin."
 
 #. module: mrp
 #: selection:mrp.production,state:0
@@ -696,8 +716,8 @@ msgid ""
 "If the active field is set to False, it will allow you to hide the routing "
 "without removing it."
 msgstr ""
-"Jos kentän arvo on epätosi, sallii vaiheistuksen piilottamisen ilman sen "
-"poistamista."
+"Jos kentän arvo on epätosi, sallii vaiheistuksen piilottamisen ilman "
+"vaiheistuksen poistamista."
 
 #. module: mrp
 #: model:process.transition,name:mrp.process_transition_billofmaterialrouting0
@@ -754,6 +774,9 @@ msgid ""
 "operations and to plan future loads on work centers based on production "
 "plannification."
 msgstr ""
+"Luettelo operaatioista (luettelo työpisteistä), joissa lopputuote "
+"valmistetaan. Vaiheistuksella lasketaan pääasiassa työpisteiden kustannukset "
+"valmistuksen aikana ja suunnitellaan tuleva kuormitus."
 
 #. module: mrp
 #: help:mrp.workcenter,time_cycle:0
@@ -773,6 +796,16 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Klikkaa lisätäksesi komponentin osaluetteloon.\n"
+"              </p><p>\n"
+"                Osaluetteloiden komponentteja ovat komponentit ja "
+"sivutuotteet,\n"
+"                joilla alkuperäinen osaluettelo on luotu. Käytä tätä "
+"valikkoa hakeaksesi\n"
+"                missä osaluetteloissa tiettyä komponenttia on käytetty.\n"
+"              </p>\n"
+"            "
 
 #. module: mrp
 #: constraint:mrp.bom:0
@@ -800,6 +833,12 @@ msgid ""
 "                    * Product Attributes.\n"
 "                This installs the module product_manufacturer."
 msgstr ""
+"Tämä sallii sinun määritellä tuotteelle seuraavat tiedot:\n"
+"                    * Valmistaja\n"
+"                    * Valmistajan tuotenimi\n"
+"                    * Valmistajan tuotekoodi\n"
+"                    * Tuotteen ominaisuudet.\n"
+"                Tämä asentaa product_manufacturer-moduulin."
 
 #. module: mrp
 #: view:mrp.product_price:0
@@ -827,6 +866,17 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Klikkaa lisätäksesi työpisteen.\n"
+"              </p><p>\n"
+"                Työpisteet sallivate sinun luoda ja hallita "
+"valmistusyksiköitä.\n"
+"                Ne muodostuvat työntekijöistä ja/tai koneista, jotka ovat \n"
+"                kuormituspisteitä työtoimeksiantojen, kapasiteetin "
+"hallinnan\n"
+"                ja ennustamisen kannalta.\n"
+"              </p>\n"
+"            "
 
 #. module: mrp
 #: model:process.node,note:mrp.process_node_minimumstockrule0
@@ -843,7 +893,7 @@ msgstr "Kuukaudessa"
 msgid ""
 "Unit of Measure (Unit of Measure) is the unit of measurement for the "
 "inventory control"
-msgstr ""
+msgstr "Yksikkö on varastovalvonnassa käytettävä mittayksikkö"
 
 #. module: mrp
 #: report:bom.structure:0
@@ -885,7 +935,7 @@ msgid ""
 "Fill this only if you want automatic analytic accounting entries on "
 "production orders."
 msgstr ""
-"Täytä tämä vain, jos haluat tuotantotilaukselle analyyttisen tilin "
+"Täytä tämä vain, jos haluat tuotantotilaukselle analyyttisen kirjanpidon "
 "kirjaukset automaattisesti."
 
 #. module: mrp
@@ -922,7 +972,7 @@ msgstr "Kiireellinen"
 #. module: mrp
 #: view:mrp.production:0
 msgid "Manufacturing Orders which are waiting for raw materials."
-msgstr "Valmistustilaukset jotka odottavat raaka-aineita."
+msgstr "Valmistustilaukset jotka odottavat raaka-aineita / komponetteja."
 
 #. module: mrp
 #: code:addons/mrp/mrp.py:285
@@ -1000,6 +1050,20 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Klikkaa aloittaaksesi uuden valmistustilauksen.\n"
+"              </p><p>\n"
+"                Valmistustilaus perustuu osaluetteloihin ja käyttää\n"
+"                raaka-aineita / komponentteja lopputuotteen "
+"valmistamiseksi.\n"
+"              </p><p>\n"
+"                Valmistustilauksia ehdotetaan yleensä automaattisesti "
+"perustuen\n"
+"                asiakasvaatimuksiin tai automaattisiin sääntöihin kuten "
+"minimi-\n"
+"                varastosääntöön.\n"
+"              </p>\n"
+"            "
 
 #. module: mrp
 #: field:mrp.bom,type:0
@@ -1194,6 +1258,11 @@ msgid ""
 "                cases entail a small performance impact.\n"
 "                This installs the module mrp_jit."
 msgstr ""
+"Tämä sallii Juuri Oikeaan Tarpeeseen -laskennan hankintatilauksilla.\n"
+"                Kaikki hankintatilaukset käsitellään heti ja tällä voi olla "
+"joissain tilanteissa \n"
+"                pientä vaikutusta järjestelmän suorituskykyyn.\n"
+"                Tämä asentaa mrp_jit-moduulin."
 
 #. module: mrp
 #: help:mrp.workcenter,costs_hour:0
@@ -1534,6 +1603,11 @@ msgid ""
 "are attached to bills of materials\n"
 "                that will define the required raw materials."
 msgstr ""
+"Vaiheistukset sallivat sinun luoda ja hallita valmistusoperaatioita, joita "
+"pitäisi seurata\n"
+"                työpisteissä lopputuotteiden valmistamiseksi. Ne on kytketty "
+"osaluetteloihin,\n"
+"                jotka määrittävät tarvittavat raaka-aineet ja komponentit."
 
 #. module: mrp
 #: view:report.workcenter.load:0
@@ -1663,6 +1737,26 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Klikkaa luodaksesi ominaisuusryhmän.\n"
+"              </p><p>\n"
+"                Määrittele erityiset ominaisuusryhmät, jotka voit kytkeä "
+"omiin\n"
+"                osaluetteloihisi ja myyntitilauksiisi. Ominaisuudet sallivat "
+"OpenERP:in\n"
+"                valita automaattisesti oikeat osaluettelot perustuen myyjien "
+"\n"
+"                myyntitilauksella valitsemiin ominaisuuksiin.\n"
+"              </p><p>\n"
+"                Esim. ominaisuusryhmässä \"Takuu\", sinulla on\n"
+"                kaksi ominaisuutta: yhden vuoden takuu ja kolmen vuoden "
+"takuu.\n"
+"                Myyntitilauksella valituista ominaisuuksista riippuen "
+"OpenERP\n"
+"                suunnittelee ja ajoittaa tuotannon vastaamaan "
+"osaluetteloita.\n"
+"              </p>\n"
+"            "
 
 #. module: mrp
 #: field:mrp.workcenter,capacity_per_cycle:0
@@ -1814,6 +1908,10 @@ msgid ""
 "the quantity selected and it will finish the production order when total "
 "ordered quantities are produced."
 msgstr ""
+"\"Käytä\" -tilassa käytetään tuotteita valittu määrä.\n"
+"\"Käytä ja Valmista\"-tilassa sekä käytetään että valmistetaan tuotteita "
+"valittu määrän ja päätetään tuotantotilaus, kun koko tilattu määrä on "
+"tuotettu."
 
 #. module: mrp
 #: view:mrp.production:0
@@ -1849,6 +1947,9 @@ msgid ""
 "lines (in the \"Work Centers\" tab).\n"
 "                This installs the module mrp_operations."
 msgstr ""
+"Tämä sallii lisätä tila, alkupäivä, loppupäivä valmistustilauksen "
+"tehtäväriveille (\"Työpiste\"-välilehdellä).\n"
+"                Tämä asentaa mrp_operations-moduulin."
 
 #. module: mrp
 #: code:addons/mrp/mrp.py:737
@@ -1857,6 +1958,8 @@ msgid ""
 "You are going to consume total %s quantities of \"%s\".\n"
 "But you can only consume up to total %s quantities."
 msgstr ""
+"Olet käyttämässä yhteensä %s tuotetta \"%s\".\n"
+"Mutta voit käyttää vain yhteensä enintään %s tuotetta."
 
 #. module: mrp
 #: model:process.transition,note:mrp.process_transition_bom0
@@ -2110,6 +2213,20 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Klikkaa luodaksesi osaluettelon.\n"
+"              </p><p>\n"
+"                Osaluettelot sallivat sinun määritellä luettelon "
+"tarvittavista\n"
+"                raaka-aineista ja komponeteista, joista valmistetaan "
+"lopputuote;\n"
+"                valmistustilauksilla tai hankintatilauksilla.\n"
+"              </p><p>\n"
+"                OpenERP käytää näitä osaluetteloita ehdottaakseen "
+"automaattisesti\n"
+"                valmistustilauksia perustuen hankintatarpeisiin.\n"
+"              </p>\n"
+"            "
 
 #. module: mrp
 #: field:mrp.routing.workcenter,routing_id:0
@@ -2134,6 +2251,10 @@ msgid ""
 "                With this module: A + B + C -> D + E.\n"
 "                This installs the module mrp_byproduct."
 msgstr ""
+"Voit konfiguroida osaluetteloon sivutuotteita.\n"
+"                Ilman tätä moduulia: A + B + C -> D.\n"
+"                Tämän moduulin kanssa: A + B + C -> D + E.\n"
+"                Tämä asentaa  mrp_byproduct -moduulin."
 
 #. module: mrp
 #: field:procurement.order,bom_id:0
@@ -2260,6 +2381,9 @@ msgid ""
 "                        The delivery order will be ready once the production "
 "is done."
 msgstr ""
+"käyttää tälle tuotteelle määriteltyjä osaluetteloita.\n"
+"                        Tuotantotilaus valmistuu samalla, kun tuotanto on "
+"tehty loppuun."
 
 #. module: mrp
 #: field:mrp.config.settings,module_stock_no_autopicking:0
@@ -2365,6 +2489,11 @@ msgid ""
 "product, it will be sold and shipped as a set of components, instead of "
 "being produced."
 msgstr ""
+"Jos sivutuotteita käytetään useissa tuotteissa, saattaa olla hyödyllistä "
+"luoda sivutuotteille oma osaluettelo. Toisaalta jos et halua erillisiä "
+"tuotantotilauksia sivutuotteelle valitse osaluettelotyypiksi Setti/Haamu. "
+"Jos haamuosaluetteloa käytetään päätuotteella, niin se myydään ja "
+"toimitetaan komponenttisettinä, eikä valmistettavana tuotteena."
 
 #. module: mrp
 #: model:ir.actions.act_window,name:mrp.action_mrp_configuration
@@ -2378,6 +2507,8 @@ msgid ""
 "a manufacturing\n"
 "                        order"
 msgstr ""
+"valmistus\n"
+"                        tilaus"
 
 #. module: mrp
 #: field:mrp.config.settings,group_mrp_properties:0
@@ -2482,7 +2613,7 @@ msgstr "Antaa esitysjärjestyksen näytettäessä osaluetteloita."
 #. module: mrp
 #: model:ir.model,name:mrp.model_mrp_config_settings
 msgid "mrp.config.settings"
-msgstr ""
+msgstr "mrp.config.settings"
 
 #. module: mrp
 #: view:mrp.production:0
