--- a/purchase/i18n/fi.po
+++ b/purchase/i18n/fi.po
@@ -8,24 +8,24 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-10 20:42+0000\n"
+"PO-Revision-Date: 2013-11-12 15:06+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-11 05:38+0000\n"
+"X-Launchpad-Export-Date: 2013-11-13 06:08+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: purchase
 #: model:res.groups,name:purchase.group_analytic_accounting
 msgid "Analytic Accounting for Purchases"
-msgstr "Analyyttiiset tilit ostoille"
+msgstr "Analyyttinen kirjanpito ostoille"
 
 #. module: purchase
 #: model:ir.model,name:purchase.model_account_config_settings
 msgid "account.config.settings"
-msgstr ""
+msgstr "account.config.settings"
 
 #. module: purchase
 #: view:board.board:0
@@ -368,7 +368,7 @@ msgstr "Keräilylista on luotu saapuvien tavaroiden seuraamiseksi"
 #: view:purchase.order:0
 #: view:purchase.report:0
 msgid "Quotations"
-msgstr "Tarjoukset"
+msgstr "Ostoehdotukset"
 
 #. module: purchase
 #: view:purchase.order.line_invoice:0
@@ -497,7 +497,7 @@ msgstr "Päiväkirja"
 #: view:board.board:0
 #: model:ir.actions.act_window,name:purchase.purchase_draft
 msgid "Request for Quotations"
-msgstr "Tarjouspyynnöt"
+msgstr "Ostoehdotukset"
 
 #. module: purchase
 #: field:purchase.order.line,move_ids:0
@@ -523,7 +523,7 @@ msgstr "Saapuvat tuotteet"
 #. module: purchase
 #: view:purchase.order:0
 msgid "Request for Quotation "
-msgstr "Tarjouspyyntö "
+msgstr "Ostoehdotus "
 
 #. module: purchase
 #: help:purchase.order,partner_ref:0
@@ -841,7 +841,7 @@ msgstr "Odottaa toimittajan vahvistusta"
 #. module: purchase
 #: report:purchase.quotation:0
 msgid "Request for Quotation :"
-msgstr "Tarjouspyyntö:"
+msgstr "Ostoehdotus"
 
 #. module: purchase
 #: model:ir.actions.act_window,name:purchase.action_picking_tree4_picking_to_invoice
@@ -883,7 +883,7 @@ msgstr "Toimitusehdot"
 #. module: purchase
 #: help:purchase.order,date_order:0
 msgid "Date on which this document has been created."
-msgstr "Tämän dokumentin luontipäivämäärä"
+msgstr "Tämän dokumentin luontipäivä"
 
 #. module: purchase
 #: field:purchase.order,message_is_follower:0
@@ -986,7 +986,7 @@ msgstr "Ostotilaukselta"
 #: model:ir.actions.report.xml,name:purchase.report_purchase_quotation
 #: selection:purchase.report,state:0
 msgid "Request for Quotation"
-msgstr "Tarjouspyyntö"
+msgstr "Ostoehdotus"
 
 #. module: purchase
 #: view:purchase.report:0
@@ -1214,7 +1214,7 @@ msgstr "Ostotilaukset jotka ovat poikkeustilassa"
 #: model:process.node,note:purchase.process_node_draftpurchaseorder0
 #: model:process.node,note:purchase.process_node_draftpurchaseorder1
 msgid "Request for Quotations."
-msgstr "Tarjouspyynnöt."
+msgstr "Ostoehdotukset"
 
 #. module: purchase
 #: view:purchase.order:0
@@ -1367,7 +1367,7 @@ msgstr "Kirjanpitäjän tarkistettavaksi"
 #. module: purchase
 #: model:ir.model,name:purchase.model_purchase_config_settings
 msgid "purchase.config.settings"
-msgstr ""
+msgstr "purchase.config.settings"
 
 #. module: purchase
 #: model:process.node,note:purchase.process_node_approvepurchaseorder0
@@ -1538,14 +1538,14 @@ msgid ""
 "            "
 msgstr ""
 "<p class=\"oe_view_nocontent_create\">\n"
-"                Klikkaa luodaksesi tarjouspyynnön.\n"
+"                Klikkaa luodaksesi ostoehdotus.\n"
 "              </p><p>\n"
-"                Tarjous sisältää keskustelujen ja neuvottelujen historian,\n"
-"                jotka olet käynyt toimittajan kanssa. Kun tarjouspyyntö on\n"
-"                vahvistettu, se muutetaan ostotilaukseksi.\n"
+"                Ostoehdotus sisältää keskustelujen/neuvottelujen historian,\n"
+"                jotka olet käynyt toimittajan kanssa. Kun ostoehdotus on\n"
+"                vahvistettu, se muuttuu ostotilaukseksi.\n"
 "              </p><p>\n"
 "                Suurin osa ostotilausehdotuksista on luotu automaattisesti\n"
-"                perustuen vasrastotarpeisiin.\n"
+"                perustuen varastotarpeisiin.\n"
 "              </p>\n"
 "            "
 
@@ -1630,7 +1630,7 @@ msgstr "Vahvistus"
 #. module: purchase
 #: report:purchase.order:0
 msgid "TIN :"
-msgstr ""
+msgstr "VAT :"
 
 #. module: purchase
 #: model:ir.ui.menu,name:purchase.menu_product_by_category_purchase_form
@@ -1828,8 +1828,8 @@ msgid ""
 "paid and received, the status becomes 'Done'. If a cancel action occurs in "
 "the invoice or in the reception of goods, the status becomes in exception."
 msgstr ""
-"Ostotilauksen tai tarjouspyynnön tila. Tarjous on ostotilaus 'Ehdotus' "
-"tilassa. Kun käyttäjä vahvistaa ostotilausehdotuksen, sen tilaksi muuttuu "
+"Ostotilauksen tai ostoehdotuksen tila. Ostoehdotus on ostotilaus 'Ehdotus' "
+"tilassa. Kun käyttäjä vahvistaa ostoehdotuksen, sen tilaksi muuttuu "
 "'Vahvistettu'. Toimittajan pitää hyväksyä seuraavaksi ostotilaus, jolloin "
 "sen tilaksi tulee 'Hyväksytty'. Kun ostotilaus on maksettu ja vastaanotettu, "
 "tilaksi tulee 'Valmis'. Jos lasku tai tuotteen vastaanotto peruutetaan niin "
@@ -1914,11 +1914,11 @@ msgid ""
 "            to one supplier or if you want a purchase requisition to "
 "negotiate with several suppliers."
 msgstr ""
-"Ostopyyntöjä käytetään kun halutaan pyytää  tarvittavista tuotteista "
+"Tarjouspyyntöjä käytetään kun halutaan pyytää  tarvittavista tuotteista "
 "tarjouksia useilta toimittajilta. \n"
 "            Konfigurointi tuotteittain onnistuu tekemällä suoraan "
-"tarjouspyyntö yhdelle toimittajalle\n"
-"            tai jos halutaan ostopyyntö, jotta voidaan neuvotella useiden "
+"ostoehdotus yhdelle toimittajalle\n"
+"            tai jos halutaan tarjouspyyntö, jotta voidaan neuvotella useiden "
 "toimittajien kanssa."
 
 #. module: purchase
@@ -2124,7 +2124,7 @@ msgstr "Tilauksen tila"
 #. module: purchase
 #: report:purchase.order:0
 msgid "Request for Quotation N°"
-msgstr "Tarjouspyynnön numero"
+msgstr "Numero"
 
 #. module: purchase
 #: view:purchase.config.settings:0
@@ -2358,12 +2358,12 @@ msgid ""
 msgstr ""
 "<p class=\"oe_view_nocontent_create\">\n"
 "                    Tälle toimittajalle ei ole ostotilausta. Klikkaa "
-"luodaksesi uusi tarjouspyyntö.\n"
+"luodaksesi uusi ostoehdotus.\n"
 "                </p><p>\n"
-"                    Tarjouspyyntö on ensimmäinen vaihe ostoprosessissa. Kun "
-"tarjouspyyntö\n"
-"                    muutetaan ostotilaukseksi,  niin tuotteiden ja "
-"toimittajan laskujen vastaanottoa\n"
+"                    Ostoehdotus on ensimmäinen vaihe ostoprosessissa. Kun "
+"ostoehdotus\n"
+"                    muutetaan ostotilaukseksi, tuotteiden vastaanottoja ja "
+"toimittajien laskuja\n"
 "                    voi kontrolloida.\n"
 "                </p>\n"
 "            "
