--- a/account/i18n/fi.po
+++ b/account/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-11-08 21:29+0000\n"
+"PO-Revision-Date: 2013-11-13 15:55+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-10 06:43+0000\n"
+"X-Launchpad-Export-Date: 2013-11-14 06:30+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: account
@@ -2023,7 +2023,7 @@ msgstr ""
 #. module: account
 #: help:account.period,special:0
 msgid "These periods can overlap."
-msgstr "Nämä jaksot voivat olla päällekkäisiä."
+msgstr "Nämä kaudet voivat olla päällekkäisiä."
 
 #. module: account
 #: model:process.node,name:account.process_node_draftstatement0
@@ -3693,7 +3693,7 @@ msgstr "Osto"
 #: view:account.installer:0
 #: view:wizard.multi.charts.accounts:0
 msgid "Accounting Application Configuration"
-msgstr "Kirjanpitoohjelmiston konfiguraatio"
+msgstr "Kirjanpitoohjelmiston konfigurointi"
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_account_vat_declaration
@@ -4457,7 +4457,7 @@ msgstr "Veronimi"
 #: view:account.config.settings:0
 #: model:ir.ui.menu,name:account.menu_finance_configuration
 msgid "Configuration"
-msgstr "Konfiguraatio"
+msgstr "Konfigurointi"
 
 #. module: account
 #: model:account.payment.term,name:account.account_payment_term
@@ -6472,7 +6472,7 @@ msgstr ""
 #. module: account
 #: view:account.tax.code:0
 msgid "Reporting Configuration"
-msgstr "Raportoinnin konfiguraatio"
+msgstr "Raportoinnin konfigurointi"
 
 #. module: account
 #: model:ir.actions.act_window,help:account.action_invoice_tree4
@@ -10108,7 +10108,7 @@ msgstr "Summa ilman veroa"
 #: model:ir.ui.menu,name:account.menu_action_account_period
 #: model:ir.ui.menu,name:account.next_id_23
 msgid "Periods"
-msgstr "Jaksot"
+msgstr "Kaudet"
 
 #. module: account
 #: field:account.invoice.report,currency_rate:0
