--- a/account/i18n/zh_CN.po
+++ b/account/i18n/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-11-11 07:10+0000\n"
-"Last-Translator: jeffery chen fan <jeffery9@gmail.com>\n"
+"PO-Revision-Date: 2013-11-13 09:04+0000\n"
+"Last-Translator: Young Hua <your1friend@126.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-12 06:22+0000\n"
+"X-Launchpad-Export-Date: 2013-11-14 06:30+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: account
@@ -122,7 +122,7 @@ msgstr "对账"
 #: xsl:account.transfer:0
 #: field:cash.box.in,ref:0
 msgid "Reference"
-msgstr "参考"
+msgstr "关联单号"
 
 #. module: account
 #: help:account.payment.term,active:0
@@ -2725,7 +2725,7 @@ msgstr "往来业务对账"
 #. module: account
 #: view:account.analytic.line:0
 msgid "Fin. Account"
-msgstr ""
+msgstr "财务账目"
 
 #. module: account
 #: field:account.tax,tax_code_id:0
@@ -4373,7 +4373,7 @@ msgstr "合并子科目"
 #: code:addons/account/wizard/account_invoice_refund.py:146
 #, python-format
 msgid "Insufficient Data!"
-msgstr ""
+msgstr "数据不足！"
 
 #. module: account
 #: help:account.account,unrealized_gain_loss:0
@@ -4867,7 +4867,7 @@ msgstr ""
 #. module: account
 #: model:ir.model,name:account.model_account_tax_template
 msgid "Templates for Taxes"
-msgstr ""
+msgstr "税费模版"
 
 #. module: account
 #: sql_constraint:account.period:0
@@ -4882,7 +4882,7 @@ msgstr ""
 #. module: account
 #: view:account.tax:0
 msgid "Tax Computation"
-msgstr ""
+msgstr "计算税款"
 
 #. module: account
 #: view:wizard.multi.charts.accounts:0
