--- a/base_setup/i18n/fi.po
+++ b/base_setup/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-12 16:33+0000\n"
+"PO-Revision-Date: 2013-11-13 17:16+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-13 06:08+0000\n"
+"X-Launchpad-Export-Date: 2013-11-14 06:30+0000\n"
 "X-Generator: Launchpad (build 16820)\n"
 
 #. module: base_setup
@@ -400,7 +400,7 @@ msgstr "Peruuta"
 #: view:base.config.settings:0
 #: view:sale.config.settings:0
 msgid "Apply"
-msgstr "Käytä"
+msgstr "Tallenna"
 
 #. module: base_setup
 #: view:base.setup.terminology:0
